Java 포스팅 시작(2)

--- a/_posts/2021-02-26-java01.md
+++ b/_posts/2021-02-26-java01.md
@@ -1,5 +1,5 @@
 ---
-title: Java 01 - 자바 프로그래밍 기초
+title: Java 01 - 자바 프로그래밍 기초(1)
 author: Kim
 date: 2021-02-26 01:50 +0900   # 2019-08-20 19:34:00 0900
 categories : ["Spring", ""]
@@ -9,17 +9,17 @@ comments : true
 
 # 프로그래밍 기초 주요 학습내용
 
-* Hello 에제분석
-* 기초 개념 - 순차적인 프로그램 작성
-* 변수와 자료형 + 프로그램 작성
-* 수식과 연산자
-* 형변환
-* 우선순위와 결합 규칙 + 프로그램 작성
-* 문자열
-* 입력과 출력
+* (1) Hello 에제분석
+* (2) 기초 개념 - 순차적인 프로그램 작성
+* (3) 변수와 자료형 + 프로그램 작성
+* (4) 수식과 연산자
+* (5) 형변환
+* (6) 우선순위와 결합 규칙 + 프로그램 작성
+* (7) 문자열
+* (8) 입력과 출력
 
 
-# Part 01-1 Hello 예제분석 - 첫 번째 프로그램 Hello World
+# (1) Hello 예제분석 - 첫 번째 프로그램 Hello World
 
 ```
 public class Hello {
