--- a/_posts/2021-02-26-java01.md
+++ b/_posts/2021-02-26-java01.md
@@ -2,8 +2,8 @@
 title: Java 01 - 자바 프로그래밍 기초(1)
 author: Kim
 date: 2021-02-26 01:50 +0900   # 2019-08-20 19:34:00 0900
-categories : ["Spring", ""]
-tags: [Spring,null]
+categories : ["Java", ""]
+tags: [Java,null]
 comments : true
 ---
 
