--- a/_posts/2021-02-26-java03.md
+++ b/_posts/2021-02-26-java03.md
@@ -20,3 +20,106 @@ comments : true
 
 
 # (3) 변수와 자료형
+
+변수(variable) 는 데이터가 저장되는 것을 의미하며 이것을 박스에 담아두는 개념이고<br>
+이것은 최종적으로 컴퓨터의 메모리에 저장합니다<br>
+※ 예를들어 주문한 택배 물건이 박스에 고스란히 담겨져 집 앞에 놓여져 있을때
+```
+물건 = "과자"
+박스 = 물건
+물건 = 집
+```
+
+변수가 필요한 상황은 사용자가 입력한 값을 저장하거나 무언가 계산 도중에 중간 결과를 저장 할때 필요합니다<br>
+
+사용하기 전에는 반드시 미리 선언명 을 지어줘야 합니다 이때 선언한다는것은 컴파일러에 변수를 사용한다고<br>
+미리 알려주는것과 같으며 ```자료형``` 에 맞는 기억 공간을 확보할수가 있습니다<br>
+
+```
+변수의 올바른 선언 형식 
+
+int number; int는 정수형(Integer) 자료형을 의미합니다 number는 변수의 이름이 됩니다
+
+int number = 9 // 변수가 선언될때 값은 아직 정의되지 않은 상태이지만
+                  선언과 동시에 초기값을 설정해줄수 있습니다
+
+```
+
+# 자료형 종류
+
+앞서 작성해본 ``` int number  ``` 는 정수형 ``` 자료형 ``` 을 의미합니다 그렇다면 자료형이 무엇일까요?<br>
+자료형(data type)은 변수에 저장되는 데이터 타입을 의미합니다<br>
+프로그래밍에서 없어사 안될 데이터 타입은 여러가지가 있으며 다양하게 사용됩니다<br> 
+
+```
+자료형 종류 1번째 : 기초형 자료 - primitive type (실제로 데이터에 값이 저장되는 값들)
+
+정수형을 가진 타입 : byte short int long
+
+실수형을 가진 타입 : double float
+
+논리형을 가진 타입 : boolean / True False (참 거짓)
+
+문자형을 가진 타입 : char 
+
+자료형 조류 2번째 : 참조형 자료 - reference type (실제 객체를 가리키는 주소를 저장)
+
+Class / Interface / Array []
+
+```
+참조형 자료 같은 경우는 추후 class 학습할때 설명 하겠습니다<br>
+
+
+※ 자료형은 변수에 저장이 되는 값들의 형태와 허용 ```연산``` 등을 결정합니다<br>
+  int 자료형은 정수형 만을 저장할수 있고 ``` 사칙연산 ``` 또한 허용됩니다<br>
+  자바에서는 자료형을 강력하게 규제하는 언어이며 반드시 타입을 지정하여야 하고 타입이 다른 데이터 일경우<br>
+  저장 할수 없습니다
+
+
+# 정수형 타입
+
+정수형은 정수를 표현할때 사용됩니다
+
+```
+정수형을 가진 타입 : byte short int long
+(1) byte
+    크기 : 1 byte
+
+(2) short
+    크기 : 2 byte
+
+(3) int ★ 자주 사용되며 32비트를 이용하여 -21 억 ~ 21억 정도 표현합니다
+    크기 : 4 byte
+
+(4) long ★ 64비트를 이용하여 int 의 최소값 최대값을 훨씬 많은 값을 표현 할수 있습니다
+    크기 : 8 byte
+```
+
+다음은 정수형을 가진 타입을 가지고 ``` 빛이 1년동안 진행하는 거리를 계산하는 ``` 프로그램을<br>
+실습해보았습니다<br>
+
+```
+package com.company;
+
+public class Light {
+    public static void main(String [] args){
+
+        long lightspeed = 30000; // 빛의 속도
+        long distance =0;    // 거리
+
+        Hint :  1광년 구하는 공식 : 빛의속도 * 1년 * 24시간 * 1시간 * 1분
+        
+        distance = lightspeed * 365 * 24 * 60 * 60;
+        System.out.println("빛이 1년동안 가는 거리 는 "+ distance + "km 입니다");
+    }
+}
+
+```
+
+```
+Result = [
+    빛이 1년동안 가는 거리 는 946080000000km 입니다
+]
+
+```
+
