--- a/_posts/2021-02-26-java01.md
+++ b/_posts/2021-02-26-java01.md
@@ -1,5 +1,5 @@
 ---
-title: Java 01 - 자바 프로그래밍 기초(1)
+title: Java 01 - 자바 프로그래밍 기초(1) Hello World
 author: Kim
 date: 2021-02-26 01:50 +0900   # 2019-08-20 19:34:00 0900
 categories : ["Java", ""]
