--- a/_posts/2021-02-26-java02.md
+++ b/_posts/2021-02-26-java02.md
@@ -1,5 +1,5 @@
 ---
-title: Java 01 - 자바 프로그래밍 기초(2)
+title: Java 01 - 자바 프로그래밍 기초(2) 기초개념
 author: Kim
 date: 2021-02-26 02:09 +0900   # 2019-08-20 19:34:00 0900
 categories : ["Java", ""]
