--- a/_posts/2021-02-26-java03.md
+++ b/_posts/2021-02-26-java03.md
@@ -1,5 +1,5 @@
 ---
-title: Java 01 - 자바 프로그래밍 기초(3)
+title: Java 01 - 자바 프로그래밍 기초(3) 변수와 자료형
 author: Kim
 date: 2021-02-26 02:54 +0900   # 2019-08-20 19:34:00 0900
 categories : ["Java", ""]
