어색한 내용 변경

--- a/_posts/2021-03-03-java06.md
+++ b/_posts/2021-03-03-java06.md
@@ -66,16 +66,15 @@ public class StringMethod {
         String b = "String";
         String c = "Hello";
 
-        System.out.println(a.equals(b)); a(Hello)... b(String) False
-        System.out.println(a.equals(c)); a(Hello)... c(Hello)  True
+        System.out.println(a.equals(b)); JVM : a(Hello) ... b(String) False
+        System.out.println(a.equals(c)); JVM : a(Hello) ... c(Hello)  True
 
         Result = false , true
     }
 }
 ```
-문자열(객체)의 값을 비교할땐 `` equals `` 메소드를 사용합니다 a와 c는 모두 Hello로 같은 값이지만<br>
-서로 다른 객체이므로 두개의 자료형이 동일한 객체인지 판별할때 유용합니다<br>
-
+문자열(객체)의 값을 비교할땐 `` equals `` 메소드를 사용합니다 a와 c는 Hello로 같은 ``값``이여서<br>
+``true``를 반환하는 것 입니다<br>
 
 ### (2) replaceAll
 
