어색한 문장 수정 및 Part1 문제풀이 추가

--- a/_posts/2021-03-02-java04.md
+++ b/_posts/2021-03-02-java04.md
@@ -19,7 +19,7 @@ comments : true
 
 
 
-# 수식
+# (4) 수식과 연산자
 
 프로그램에서 무언가를 계산을 하기 위해선 일상에서 사용하는 수학같은 형태의 수식을 사용합니다<br>
 예를들어 x + y 와 같이 ``` + ``` 연산자로 구성된 식을 ``` 수식 ``` 이라고 부릅니다<br>
