--- a/_posts/2021-03-03-java06.md
+++ b/_posts/2021-03-03-java06.md
@@ -18,7 +18,7 @@ comments : true
 * (7) 입력과 출력
 
 
-# 문자열
+# (6) 문자열
 
 문자열은 어떠한 문자들의 모임을 말합니다 예를 들어 문자열 "Hello"는<br>
 H.e.l.l.o 5개의 ``유니코드`` 문자로 구성되어 있는데 자바에서는 내장된 문자열 자료형이 없어서<br>
