--- a/_posts/2021-03-03-java07.md
+++ b/_posts/2021-03-03-java07.md
@@ -17,7 +17,7 @@ comments : true
 * (6) 문자열
 * (7) 입력과 출력
 
-# 입력하기
+# (7) 입력과 출력
 
 변수와 자료형 포스팅 내용중 마일을 킬로미터로 변환하는 프로그램을 작성할때<br>
 코드중 `` import java.util.Scanner; `` 를 사용했었습니다 이 문장의 의미는<br>
