--- a/_posts/2021-03-03-part1-final.md
+++ b/_posts/2021-03-03-part1-final.md
@@ -77,5 +77,115 @@ Result = [
 ]
 ```
 
+# 직사각형 둘레와 면적 값을 입력받고 계산하기
+
+다음은 직사각형의 둘레와 면적을 계산하는 프로그램 입니다<br>
+
+* 사용자로부터 직사가형의 가로와 세로를 입력 받아 둘레와 면적을 구합니다<br>
+  ※ 가로와 세로를 각각 w 와 h 라고 하면 면적은 w x h
+* 필요한 변수는 w , h area , perimeter 를 사용합니다
+* 변수의 자료형은 double형 으로 정합니다
+* area = w x h
+* perimeter = 2 * (w + h)
+
+```
+package expression;
+
+import java.util.Scanner;
+
+public class Example02 {
+    public static void main(String [] args){
+
+        double width = 0.0; // 가로
+        double height= 0.0; // 세로
+        double area = 0.0;  // 면적
+        double perimeter = 0.0; // 둘레
+
+        Scanner scan = new Scanner(System.in);
+        System.out.println("구하고자 하는 가로를 입력하세요 : ");
+        width = scan.nextDouble();
+        System.out.println("구하고자 하는 세로를 입력하세요 : ");
+        height = scan.nextDouble();
+
+        System.out.println("가로 길이 : " + width);
+        System.out.println("세로 길이 : " + height);
+        
+        area = width * height;
+        perimeter = 2.0 * (width + height);
+        System.out.println("면적의 값은 " + area + "입니다");
+        System.out.println("둘레의 길이는 " + perimeter + "입니다");
+    }
+}
+```
+
+```
+Result = [
+구하고자 하는 가로를 입력하세요 : 
+10
+구하고자 하는 세로를 입력하세요 : 
+5
+가로 길이 : 10.0
+세로 길이 : 5.0
+면적의 값은 50.0입니다
+둘레의 길이는 30.0입니다
+면적의 값50.0둘레의 값 30.0
+]
+```
+
+# 백준알고리즘 - 사칙연산 [10869번]
+
+``문제``
+두 자연수 A와 B가 주어진다. 이때, A+B, A-B, A*B, A/B(몫), A%B(나머지)를 출력하는 프로그램을 작성하시오. 
+
+``입력``
+두 자연수 A와 B가 주어진다. (1 ≤ A, B ≤ 10,000)
+
+``출력``
+첫째 줄에 A+B, 둘째 줄에 A-B, 셋째 줄에 A*B, 넷째 줄에 A/B, 다섯째 줄에 A%B를 출력한다.
+
+``예제 입력`` : 7 3<br>
+``예제 출력`` :<br>
+10<br>
+4<br>
+21<br>
+2<br>
+1<br>
+```
+package expression;
+
+import java.util.Scanner;
+
+public class BackJoonExample {
+    public static void main(String [] args){
+
+        int f_value = 0;
+        int s_value = 0;
+        
+        Scanner scan = new Scanner(System.in);
+        System.out.println("두 자연수 A 와 B 를 입력하세요 : ");
+        f_value = scan.nextInt();
+        s_value = scan.nextInt();
+
+        System.out.println(f_value + s_value);
+        System.out.println(f_value - s_value);
+        System.out.println(f_value * s_value);
+        System.out.println(f_value / s_value);
+        System.out.println(f_value % s_value);
+    }
+}
+Result = [
+두 자연수 A 와 B 를 입력하세요 : 
+7
+3
+
+10
+4
+21
+2
+1
+]
+
+```
+
 
 
