Java 포스팅 시작(10-1)
- 조건문 내용 추가 및 수정

--- a/_posts/2021-03-05-java09.md
+++ b/_posts/2021-03-05-java09.md
@@ -7,14 +7,14 @@ tags: [Java,null]
 comments : true
 ---
 
-# 조건문
+# 조건문 if ( ) { } else { }
 
 조건문은 우리가 살아가면서 일상생활 에도 적용합니다 예를들면 다음과 같습니다<br>
-현재 내가 ``배가고프면`` 밥을먹고 쉬거나 ``배가고프지 않으면``  먹지 않고 활동을 한다는 것 처럼<br>
+만약에``(if)`` 지금 배가고프면 밥을먹고 쉬거나 ``(else)`` 배가고프지 않으면 먹지 않고 활동을 한다는 것 처럼<br>
 
 프로그램도 외부에서 들어오는 데이터정보에 따라서 많은 선택을 합니다<br>
 ``if else`` 문은 조건에 따라 2개중에서 하나를 선택해야 하는 경우에 사용합니다<br>
-
+다음 간단한 예제를 보면
 ```
 package part02;
 
@@ -183,3 +183,76 @@ else 문을 실행하게 됩니다
 ```
 가장 큰 수는 20 입니다 두번째  정수가 크네요
 ```
+
+# 성과급 계산하기
+* OO회사사원 인 K씨가 실적 목표를 달성했을경우 실적 목표를 초과한 금액의 10%를 성과급을 받습니다
+* 실적 목표가 1000일때 받을수 있는 성과급은 얼마인지 작성하는 프로그램 입니다.
+
+```
+package part02;
+
+import java.util.Scanner;
+
+public class Bonus {
+    public static void main(String [] args){
+
+        final int target = 1000; // 실적목표
+        int sales = 0 ; // 실적
+        int bonus = 0 ; // 보너스
+        String name = ""; // 이름
+        boolean result = true; // 실적 성공 유무
+
+        Scanner scan = new Scanner(System.in);
+        System.out.println("이름을 입력하세요 : ");
+        name = scan.nextLine();
+        System.out.println(name + "님 안녕하세요 실적을 입력해주세요(단위 만원) : ");
+        sales = scan.nextInt();
+        System.out.println("실적값 = "+ sales); // 값이 들어가는지 테스트
+
+        ※ ▼ if(sales) 값이 1200일때
+
+        if (sales >= 1000){  --> 1200 >= 1000 조건은 true이므로 문장 실행이 됩니다 
+            bonus = (sales - target) / 10;
+            System.out.println(result+ " 보너스 " + bonus + "만원이 지급 되었습니다.");
+        }else {
+            result = false;
+            System.out.println(result);
+        }
+    }
+}
+Result =[
+    이름을 입력하세요 : 
+    kim
+    kim님 안녕하세요 실적을 입력해주세요(단위 만원) : 
+    1500
+    실적값 = 1500
+    true 보너스 50만원이 지급 되었습니다.
+]
+```
+
+# 중첩 if
+
+`` if-else `` 에서 실행되는 문장1 이나 문장2 자리에 추가로 if문이 들어가는 경우도 있습니다<br>
+이것을 바로 ``중첩 if`` 문 이라고 부르는데 아주 간단한 예제로 살펴보겠습니다
+
+```
+package part02;
+public class Test {
+    public static void main(String [] args){
+
+        int value = 100;
+
+        if(value >= 80){ //   (1)
+            if(value >=90){// (2)
+                System.out.println("Up");
+            }else{         // (3)
+                System.out.println("Down");
+             }
+        }
+    }
+}
+```
+약간 혼란스럽지만 ``(3) else`` 문은 가장 가까운 if문장 인 ``(2) ``번과 매치하게 됩니다.
+
+
+
