어색한 내용 수정

--- a/_posts/2021-03-04-java08.md
+++ b/_posts/2021-03-04-java08.md
@@ -9,7 +9,7 @@ comments : true
 
 선택과 반복 주요 학습내용
 * (1) 제어문
-* (2) if - else - 프로그램 작성하기
+* (2) 조건문 if - else - 프로그램 작성하기
 * (3) switch - 월의 일수 출력하는 프로그램
 * (4) while - 최대공약수 찾기 + 최소값 최대값 찾기 프로그램
 * (5) for - 약수 계산하기 + 난수의 합 계산하기 프로그램
