--- a/_posts/2021-03-05-java09.md
+++ b/_posts/2021-03-05-java09.md
@@ -1,5 +1,5 @@
 ---
-title: Java 02 - 선택과 반복 (1) if else 
+title: Java 02 - 선택과 반복 (2) if else 
 author: Kim
 date: 2021-03-05 10:17 +0900   # 2019-08-20 19:34:00 0900
 categories : ["Java", ""]
@@ -7,7 +7,7 @@ tags: [Java,null]
 comments : true
 ---
 
-# 조건문 if ( ) { } else { }
+# (2) 조건문 if ( ) { } else { }
 
 조건문은 우리가 살아가면서 일상생활 에도 적용합니다 예를들면 다음과 같습니다<br>
 만약에``(if)`` 지금 배가고프면 밥을먹고 쉬거나 ``(else)`` 배가고프지 않으면 먹지 않고 활동을 한다는 것 처럼<br>
