--- a/_posts/2021-03-05-java09.md
+++ b/_posts/2021-03-05-java09.md
@@ -1,5 +1,5 @@
 ---
-title: Java 02 - 선택과 반복 (2) if else 
+title: Java 02 - 선택과 반복 (2) 조건문 if else 
 author: Kim
 date: 2021-03-05 10:17 +0900   # 2019-08-20 19:34:00 0900
 categories : ["Java", ""]
