--- a/_posts/2021-03-05-java10.md
+++ b/_posts/2021-03-05-java10.md
@@ -1,5 +1,5 @@
 ---
-title: Java 02 - 선택과 반복 (3) Switch
+title: Java 02 - 선택과 반복 (3) Switch 문
 author: Kim
 date: 2021-03-05 16:06 +0900   # 2019-08-20 19:34:00 0900
 categories : ["Java", ""]
