Java 포스팅 시작(13)
- for 문 포스팅 및 그 외 문장 수정

--- a/_posts/2021-03-07-java11.md
+++ b/_posts/2021-03-07-java11.md
@@ -289,8 +289,11 @@ Result = {
 입력한 값 10 의  총합은 = 55입니다
 }
 ```
-이렇게 ``sum`` 으로 총합을 구해보았습니다.
+이렇게 ``sum`` 으로 총합을 구해보았습니다.<br>
 
+이번 while 포스팅 이후 더 많은 문제풀이는 <a href = "/posts/java101_a">알고리즘 도전</a> 에서 계속됩니다<br>
+오른쪽 화면 중앙에 있는 ``Contents`` 를 참고하세요 !
+ 
 
 
 
