--- a/_posts/2021-03-05-java101_a.md
+++ b/_posts/2021-03-05-java101_a.md
@@ -307,10 +307,206 @@ public class Alerm {
         }else{
             if ( m >= alerm) {
                 m = m - alerm;
-                System.out.println(" 45분 저장 결과 : "+ h + " " +  m);
+                System.out.println(" "+ h + " " +  m);
             }
         }
     }
 }
 ```
+
+# (6) 구구단 2739번
+
+문제<br>
+N을 입력받은 뒤, 구구단 N단을 출력하는 프로그램을 작성하시오. 출력 형식에 맞춰서 출력하면 된다.<br>
+
+입력<br>
+첫째 줄에 N이 주어진다. N은 1보다 크거나 같고, 9보다 작거나 같다.<br>
+
+### Solution   
+
+```java
+package backjoon02;
+
+import java.util.Scanner;
+
+public class Backjoon01 {
+    public static void main(String [] args){
+
+        // for - 구구단문제
+
+        int value =0;
+        Scanner scan = new Scanner(System.in);
+        value = scan.nextInt();
+
+        for(int i = 1 ; i <= 9 ; i ++) {
+            System.out.println(value + " * " + i + " = " + value * i);
+        }
+    }
+}
+
+```
+
+# (7) A+B -3 10950번
+
+문제<br>
+두 정수 A와 B를 입력받은 다음, A+B를 출력하는 프로그램을 작성하시오.<br>
+
+입력<br>
+첫째 줄에 테스트 케이스의 개수 T가 주어진다.<br>
+
+각 테스트 케이스는 한 줄로 이루어져 있으며, 각 줄에 A와 B가 주어진다. (0 < A, B < 10)<br>
+
+출력<br>
+각 테스트 케이스마다 A+B를 출력한다.<br>
+
+`` 예제 입력 1 ``  <br>
+```
+5
+1 1
+2 3
+3 4
+9 8
+5 2
+```
+`` 예제 출력 1 `` <br>
+```
+2
+5
+7
+17
+7
+```
+
+### Solution   
+
+```java
+package backjoon02;
+
+import java.util.Scanner;
+
+public class Backjoon02 {
+    public static void main ( String [] args){
+
+        // for - A + B - 3
+        int a = 0;
+        int b = 0;
+        int count = 0;
+
+        Scanner scan = new Scanner(System.in);
+        count = scan.nextInt();
+
+        for (int i = 1 ; i <= count ; i ++) {
+            a = scan.nextInt();
+            b = scan.nextInt();
+            System.out.println(a + b);
+        }
+    }
+}
+```
+
+# (8) A+B -3 10950번
+
+문제 <br>
+n이 주어졌을 때, 1부터 n까지 합을 구하는 프로그램을 작성하시오. <br>
+
+입력 <br>
+첫째 줄에 n (1 ≤ n ≤ 10,000)이 주어진다. <br>
+
+출력 <br>
+1부터 n까지 합을 출력한다. <br>
+
+### Solution   
+
+```java
+package backjoon02;
+
+import java.util.Scanner;
+
+public class Backjoon03 {
+    public static void main(String [] args){
+        
+        // for - 합 구하기
+
+        int num = 0;
+        int sum = 0;
+        Scanner scan = new Scanner(System.in);
+
+        num = scan.nextInt();
+
+        for (int i = 1 ; i <= num ; i ++) {
+            sum = sum + i;
+        }
+        System.out.println(sum);
+    }
+}
+```
+
+# (9) A+B -3 10950번
+
+문제<br>
+
+입출력 방식이 느리면 여러 줄을 입력받거나 출력할 때 시간초과가 날 수 있다는 점이있다<br>
+Java를 사용하고 있다면, Scanner와 System.out.println 대신 BufferedReader와 BufferedWriter를 사용할 수 있다.<br> BufferedWriter.flush는 맨 마지막에 한 번만 하면 된다.<br>
+
+입력<br>
+첫 줄에 테스트케이스의 개수 T가 주어진다. T는 최대 1,000,000이다.<br>
+다음 T줄에는 각각 두 정수 A와 B가 주어진다. A와 B는 1 이상, 1,000 이하이다.<br>
+
+출력<br>
+각 테스트케이스마다 A+B를 한 줄에 하나씩 순서대로 출력한다.<br>
+
+예제 입력 1<br>
+
+```
+5
+1 1
+12 34
+5 500
+40 60
+1000 1000
+```
+
+예제 출력 1<br>
+
+```
+2
+46
+505
+100
+2000
+```
+
+### Solution  
+
+<a href = "https://st-lab.tistory.com/41">입력에 대한 구조 살펴보기</a><br>
+출처 : ``https://st-lab.tistory.com/41``
+
+```
+package backjoon02;
+
+import java.io.BufferedReader;
+import java.io.BufferedWriter;
+import java.io.InputStreamReader;
+import java.io.OutputStreamWriter;
+import java.util.StringTokenizer;
+
+public class Backjoon04 {
+    public static void main (String [] args) throws Exception{
+        BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+        BufferedWriter bw = new BufferedWriter(new OutputStreamWriter(System.out));
+
+        int num = Integer.parseInt(br.readLine());
+        StringTokenizer st;
+
+        for (int i = 0; i < num ; i++) {
+            st = new StringTokenizer(br.readLine(), " ");
+            bw.write(Integer.parseInt(st.nextToken()) + Integer.parseInt(st.nextToken()) + "\n");
+        }
+        br.close();
+        bw.flush();
+        bw.close();
+    }
+}
+```
+
 
