--- a/_posts/2021-03-05-java101_a.md
+++ b/_posts/2021-03-05-java101_a.md
@@ -10,7 +10,9 @@ comments : true
 본 포스팅은 <a href = "https://www.acmicpc.net/">백준</a> 사이트에서 진행 할 수있는 알고리즘 풀어보는 포스팅 입니다<br>
 ``선택과 반복`` 진도에 맞게 문제풀이 합니다<br>
 
+* 사용하는 언어 : java
 * 목표 : 매주 1개 이상 알고리즘 문제 풀이 업데이트 하기 !!<br>
+
 
 # (1) 두 수 비교하기 1330번
 <br>
@@ -508,5 +510,3 @@ public class Backjoon04 {
     }
 }
 ```
-
-
