배열 포스팅 내용 수정 및 이미지 추가

--- a/_posts/2021-03-12-java14.md
+++ b/_posts/2021-03-12-java14.md
@@ -16,8 +16,9 @@ comments : true
 * (5) 2차원 배열
 * (6) ArrayList
 * (7) 래그드 배열
+* (8) 배열을 이용한 알고리즘 도전하기 !!
 
-※ 학습목표 : Null
+※ 학습목표 : 배열의 `` 기초 개념 `` 을 배우고 대용량의 데이터를 사용하는 프로그램의 작성을 진행합니다<br>
 
 
 # 배열
@@ -38,13 +39,18 @@ int s0 , s1 , s2 , s3 , s4 , s5 , s6 , s7 , s8 , s9 , s10
 따라서 이렇게 하나씩 변수를 만드는것보다 손쉽게 대량의 데이터를 저장할 수 있는 방법이 바로 `` 배열 `` 이 되죠<br>
 일반적으로 배열은 아래와 같이 선언 할수 있습니다<br>
 
+<img src = "/post/images/array.png">
+
+이미지 출처 : <a href = "https://korin-learning.tistory.com/56">코린이 배움일지</a>
+
+간단하게 예제로 알아보도록 하겠습니다<br>
 ```
 package part03;
 
 public class ArrayTest {
     public static void main( String [] args) throws Exception{
 
-        int [ ] array = new int [10]; // 배열의 선언
+        int [ ] array = new int [10]; // 배열의 크기와 선언하기
 
         for ( int i = 0 ; i < array.length ; i ++) {
             System.out.println(array[i]);
@@ -54,7 +60,7 @@ public class ArrayTest {
 }
 ```
 
-위 코드중에 for 문이 어떻게 실행되는지 짐작을 해보자면 현재 `` i는 array `` 의 `` length `` 만큼 조건식을 주었는데<br>
+위 코드중에 for 문이 어떻게 실행되는지 보면 현재 `` i는 array `` 의 `` length `` 만큼 조건식을 주었는데<br>
 코드 결과는 다음과 같습니다<br>
 
 ```
@@ -64,10 +70,20 @@ Array 0
       .
 ```
 
-※ `` i <= array.length `` 는 배열의 길이 만큼 진행한다는 의미가 됩니다 현재 배열은 `` [10] `` 의 값이 저장된 상태고<br>
-  for 반복문이 배열의 길이만큼 읽어낸거나 마찬가지가 되는것입니다<br> 
+※ `` i <= array.length `` 는 배열의 길이 만큼 진행한다는 의미가 됩니다 현재 배열은 `` [10] `` 만큼 길이가 있고<br>
+  for 반복문이 배열의 길이만큼 읽어낸거나 마찬가지 입니다<br>
+  길이는 배열의 ``크기`` 가 됩니다
 
-배열의 요소들은 인덱스 (index) 라고 불리는 번호가 붙어 있습니다 이 번호를 통하여 배열 요소에 접근할 수 있는데<br>
+
+### Index
+
+배열의 요소들은 인덱스 (index) 라고 불리는 번호가 붙어 있습니다 이 번호를 통하여<br>
+[ 배 열 ] 요소에 접근할 수 있습니다<br>
+
 방금 작성한 코드중 `` int [] array = new int [10] `` 에서 `` array `` 가 `` 정수 배열 `` 이라면 <br>
+`` array[i] `` 로 작성할수 있고 배열 안에 있는 `` i 번째 정수로 시작할수 있습니다``
 
-`` array[i] `` 는 배열 안에 있는 `` i 번째 정수가 됩니다 ``
+<img src = "/post/images/index.png"><br>
+이미지 출처 : <a href = "http://oopsla.sch.ac.kr/lecture/c/ju10/chap_10-2.htm">oopsal.sch.ac.kr</a>
+
+※ 인덱스 번호는 0부터 시작합니다
