Java 포스팅 시작(16) - Update
- 포스팅 추가 내용

--- a/_posts/2021-03-12-java15.md
+++ b/_posts/2021-03-12-java15.md
@@ -169,17 +169,81 @@ public class ArrayTest02 {
   `` ArrayList `` 는 추후에 포스팅 될 내용입니다<br>
 
 
+# 배열의 초기화
+
+배열을 ``선언과 동시에 초기화`` 하려면 다음과 같은 방법으로 실행 할 수 있습니다<br>
+
+``` java
+int [] array = {10,20,30 ...}
+```
+
+※ 선언한 다음 중괄호를 사용하여 원소의 초기값을 정해줍니다 이때 `` new `` 연산자는 사용하지 않습니다<br>
+  이 방법은 배열에 저장되는 수를 미리 알고 있는 경우에 사용됩니다<br>
+
+``` java
+
+package part03;
+
+public class ArrayTest03 {
+    public static void main (String [] ags){
+
+        int [] start = {10 , 20 , 30};
+
+        for ( int i = 0 ; i < start.length ; i ++){
+            System.out.println(start[i]);
+        }
+    }
+}
+```
+
+아래 문장은 상당한 많은 작업을 하는데 먼저 배열 참조 변수를 선언하고 배열을 생성합니다<br>
+이때 주어진 초기값을 `` 배열 원소 `` 에 저장하는것 입니다 이 경우 `` new `` 연산자는 생성하지 않고<br>
+자동으로 초기값 개수만큼의 배열이 생성됩니다<br>
+
+```java
+int [] start = {10 , 20 , 30};
+```
+
+배열 초기화에 잘못된 예시
+
+```java
+int start;
+start = {10,10,10 ...}; 
+```
+
+위는 잘못된 예시 일 뿐 사실 이렇게 작성하는것도 가능합니다 <br>
+
+``` java
+int start ;
+strat = new int [] { 10 , 10 , 10 ...}
+```
 
 
+# 문제 2) 피자 토핑 종류
+
+* 문자열의 배열로 만들어 봅니다
+* 5가지 이상의 토핑 종류를 마음껏 배열에 끼워맞춰보세요 !
+
+```java
+package part03;
 
 
+public class PizzaTopping {
+    public static void main ( String [] args) {
 
-
-  
-
-
-
-
-
-
+        String [] topping = {"올리브","페퍼로니","감자","고구마","버섯"};
+        for (int i = 0 ; i < topping.length ; i ++) {
+            System.out.println(topping[i]);
+        }
+    }
+}
+결과 : {
+    올리브
+    페퍼로니
+    감자
+    고구마
+    버섯
+}
+```
+※ 피자 문제 수정예정
 
