--- a/_posts/2021-03-12-java15.md
+++ b/_posts/2021-03-12-java15.md
@@ -247,3 +247,36 @@ public class PizzaTopping {
 ```
 ※ 피자 문제 수정예정
 
+# 문제 3) 성적 평균 계산하기
+
+* 사용자로부터 학생의 수를 입력받습니다
+* 배열 크기는 학생의 수 만큼 이어야 합니다
+* 학생의 수 / 총점수로 성적 평균을 구하는 프로그램을 작성하십시오
+
+```java
+package blog_part03;
+
+import java.util.Scanner;
+
+public class ArrayTest04 {
+    public static void main(String [] args) {
+
+        // 성적 평균 계산하기 프로그램 만들기
+
+        System.out.println("학생 수를 입력하세요 :");
+        Scanner scan = new Scanner(System.in);
+        final int STUDENTS = scan.nextInt();
+        int [] arr = new int [STUDENTS];
+        int result = 0;
+        System.out.println("입력 하신 학생 수 : " + STUDENTS);
+
+        for (int i = 0 ; i < arr.length; i ++) {
+            System.out.println("점수 입력 : ");
+            arr[i] = scan.nextInt();
+            result += arr[i];
+        }
+        System.out.println("총 점수 = " + result  +  " 평균 성적은 " + result / STUDENTS + " 입니다");
+
+    }
+}
+```
