--- a/_posts/2021-03-05-java101_a.md
+++ b/_posts/2021-03-05-java101_a.md
@@ -7,7 +7,7 @@ tags: [Java,BackJoon]
 comments : true
 ---
 
-본 포스팅은 <a href = "https://www.acmicpc.net/">백준</a> 사이트에서 진행 할 수있는 알고리즘 풀어보는 포스팅 입니다<br>
+본 포스팅은 <a href = "https://www.acmicpc.net/">백준</a> 사이트에서 진행 할 수있는 알고리즘 문제 + 그외 다양한 문제풀이 포스팅 입니다<br>
 ``선택과 반복`` 진도에 맞게 문제풀이 합니다<br>
 
 * 사용하는 언어 : java
