서버 테스트(3)

--- a/_posts/2021-03-12-java15.md
+++ b/_posts/2021-03-12-java15.md
@@ -129,6 +129,7 @@ at part03.ArrayExample.main(ArrayExample.java:15)
 * 반복 루프를 이용해서 배열 요소에 값을 채워 넣습니다
 * 0 부터 시작하여  n 까지의 값으로 배열을 채워넣습니다
 
+
 ```java
 package part03;
 
@@ -204,7 +205,7 @@ public class ArrayTest03 {
 int [] start = {10 , 20 , 30};
 ```
 
-배열 초기화에 잘못된 예시
+배열 초기화에 잘못된 예시<br>
 
 ```java
 int start;
@@ -223,6 +224,7 @@ strat = new int [] { 10 , 10 , 10 ...}
 
 * 문자열의 배열로 만들어 봅니다
 * 5가지 이상의 토핑 종류를 마음껏 배열에 끼워맞춰보세요 !
+
 
 ```java
 package part03;
@@ -246,6 +248,7 @@ public class PizzaTopping {
 }
 ```
 ※ 피자 문제 수정예정
+
 
 # 문제 3) 성적 평균 계산하기
 
