--- a/_posts/2021-03-18-java201_a.md
+++ b/_posts/2021-03-18-java201_a.md
@@ -12,3 +12,102 @@ comments : true
 * 사용하는 언어 : java
 * 목표 : 매주 1개 이상 알고리즘 문제 풀이 업데이트 하기 !!<br>
 
+
+# (1) 백준 10818번
+
+문제<br>
+N개의 정수가 주어진다. 이때, 최솟값과 최댓값을 구하는 프로그램을 작성하시오.<br>
+
+입력<br>
+첫째 줄에 정수의 개수 N (1 ≤ N ≤ 1,000,000)이 주어진다.<br>
+둘째 줄에는 N개의 정수를 공백으로 구분해서 주어진다.<br>
+모든 정수는 -1,000,000보다 크거나 같고, 1,000,000보다 작거나 같은 정수이다.<br>
+
+출력<br>
+첫째 줄에 주어진 정수 N개의 최솟값과 최댓값을 공백으로 구분해 출력한다.<br>
+
+```
+예제 입력  
+5
+20 10 35 30 7
+
+예제 출력 
+7 35
+```
+
+### Solution
+
+이 문제는 ``` 배열 ``` 을 사용합니다.<br>
+
+```java
+import java.io.BufferedReader;
+import java.io.InputStreamReader;
+import java.util.Arrays;
+import java.util.StringTokenizer;
+
+public class Main {
+    public static void main(String [] args) throws Exception {
+
+        BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+        int arrCount = Integer.parseInt(br.readLine());
+        int[] arr = new int [arrCount];
+        StringTokenizer st = new StringTokenizer(br.readLine(), " ");
+
+        for (int i = 0 ; i < arr.length; i ++) {
+            arr[i] = Integer.parseInt(st.nextToken());
+        }
+        Arrays.sort(arr);
+        System.out.println(arr[0] +" "+arr[arrCount - 1]);
+    }
+}
+```
+
+### 코드분석
+
+(1) BufferedReader 객체를 이용한 입출력 방식 선언<br>
+
+```java
+BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+```
+※ 기존에 입출력 할때 사용했던 ```Scanner``` 객체보다 더 빠른 입출력으로 출력이 가능합니다<br>
+
+
+(2) 배열의 크기를 정수형 타입으로 정해줍니다<br>
+
+``` java
+int arrCount = Integer.parseInt(br.readLine());
+int[] arr = new int [arrCount];
+```
+※ BufferedReader 는 기본적으로 문자열을 반환하기 때문에 ``` Integer.parseInt``` 를 이용하여<br>
+문자열 타입을 정수형 타입으로 변환시키게 만듭니다<br>
+
+
+(3) StringTokenizer 객체를 이용한 데이터 입력 및 분리
+
+```java
+
+StringTokenizer st = new StringTokenizer(br.readLine(), " ");
+
+for (int i = 0 ; i < arr.length; i ++) {
+    arr[i] = Integer.parseInt(st.nextToken());
+}
+```
+※ 이곳에서 정수형 타입을 저장합니다
+
+(4) 출력<br>
+
+(3)번 에서 ``arr[i] = Integer.parseInt(st.nextToken());`` 저장된 데이터를 Arrays 클래스의 sort() 메소드로<br>
+오름차순 으로 정렬시키면 ```가장 작은 값```에 위치한 index 와 --> 7<br>
+```가장 큰 값```에 위치하는 index를 -1을 하여 출력시킵니다 --> 35<br>
+
+```java
+Arrays.sort(arr);
+System.out.println(arr[0] +" "+arr[arrCount - 1]);
+```
+
+```
+출력결과 :
+5
+20 10 35 30 7
+7 35
+```
