--- a/_posts/2021-03-18-java201_a.md
+++ b/_posts/2021-03-18-java201_a.md
@@ -111,3 +111,58 @@ System.out.println(arr[0] +" "+arr[arrCount - 1]);
 20 10 35 30 7
 7 35
 ```
+
+# (2) 백준 2562번
+
+문제<br>
+9개의 서로 다른 자연수가 주어질 때, 이들 중 최댓값을 찾고 그 최댓값이 몇 번째 수인지를 구하는 프로그램을 작성하시오.<br>
+
+예를 들어, 서로 다른 9개의 자연수<br>
+
+3, 29, 38, 12, 57, 74, 40, 85, 61 이 주어지면, 이들 중 최댓값은 85이고, 이 값은 8번째 수이다.<br>
+
+입력
+첫째 줄부터 아홉 번째 줄까지 한 줄에 하나의 자연수가 주어진다. 주어지는 자연수는 100 보다 작다.<br>
+
+출력<br>
+첫째 줄에 최댓값을 출력하고, 둘째 줄에 최댓값이 몇 번째 수인지를 출력한다.<br>
+
+```
+예제 입력
+3 29 38 12 57 74 40 85 61
+
+예제 출력  
+85 8
+```
+
+### Solution
+
+```java
+import java.io.BufferedReader;
+import java.io.IOException;
+import java.io.InputStreamReader;
+import java.util.StringTokenizer;
+
+public class Main {
+    public static void main(String [] args) throws IOException {
+
+        BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+        StringTokenizer st = new StringTokenizer(br.readLine());
+        // 런타임 에러 발생시 StringTokenizer 삭제
+        int indexOf = 0;
+        int input = 0;
+        int max = 0;
+
+        for (int i = 0 ; i < 9 ; i ++) {
+            input = Integer.parseInt(st.nextToken());
+            // 런타임 에러 발생시 Integer.parseInt(br.readLine());
+            if (input > max) {
+                max = input;
+                indexOf = i ;
+            }
+        }
+        System.out.println(max);
+        System.out.println(indexOf + 1);
+    }
+}
+```
