카테고리 설정 변경

--- a/_posts/2021-03-05-java101_a.md
+++ b/_posts/2021-03-05-java101_a.md
@@ -2,7 +2,7 @@
 title: Java 02 - 선택과 반복 ★ 알고리즘 도전
 author: Kim
 date: 2021-03-09 16:10 +0900   # 2019-08-20 19:34:00 0900
-categories : ["Java", ""]
+categories : ["Java", "Algorithms"]
 tags: [Java,BackJoon]
 comments : true
 ---
@@ -483,7 +483,7 @@ Java를 사용하고 있다면, Scanner와 System.out.println 대신 BufferedRea
 <a href = "https://st-lab.tistory.com/41">입력에 대한 구조 살펴보기</a><br>
 출처 : ``https://st-lab.tistory.com/41``
 
-```
+```java
 package backjoon02;
 
 import java.io.BufferedReader;
