배열 알고리즘 문제 Update(3)
- 3052번 Update

--- a/_posts/2021-03-18-java201_a.md
+++ b/_posts/2021-03-18-java201_a.md
@@ -166,3 +166,97 @@ public class Main {
     }
 }
 ```
+
+# (3) 백준 3052번
+
+문제<br>
+두 자연수 A와 B가 있을 때, A%B는 A를 B로 나눈 나머지 이다.<br>
+예를 들어, 7, 14, 27, 38을 3으로 나눈 나머지는 1, 2, 0, 2이다. <br>
+
+수 10개를 입력받은 뒤, 이를 42로 나눈 나머지를 구한다. 그 다음 서로 다른 값이 몇 개 있는지<br>
+출력하는 프로그램을 작성하시오.<br>
+
+입력<br>
+첫째 줄부터 열번째 줄 까지 숫자가 한 줄에 하나씩 주어진다. 이 숫자는 1,000보다 작거나 같고, 음이 아닌 정수이다.<br>
+
+출력<br>
+첫째 줄에, 42로 나누었을 때, 서로 다른 나머지가 몇 개 있는지 출력한다.<br>
+
+출력 : <a href = "https://www.acmicpc.net/problem/3052">3052번 출력</a>
+
+
+### Solution
+
+```java
+import java.io.BufferedReader;
+import java.io.InputStreamReader;
+import java.util.HashSet;
+
+public class Main {
+    public static void main(String [] args) throws Exception{
+        // 1. 10개의 자연수를 입력받습니다
+        // 2. 자연수 / 42 나누어서 이때 나머지가 다른 값이 몇개 있는지 출력하십시오
+        // 3. 배열을 사용합니다
+
+        BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+        HashSet<Integer> hs = new HashSet<Integer>();
+
+        int [] arr = new int[10];
+
+        for (int i = 0 ; i < arr.length ; i ++) {
+            arr[i] = Integer.parseInt(br.readLine()) % 42;
+            hs.add(arr[i]);
+        }
+        System.out.println(hs.size());
+    }
+}
+```
+
+### 코드분석
+
+이 문제는 입력한 10개의 자연수를 각각 42로 나누어 ``나머지 값`` 만 서로 다른 것을 구하면 됩니다<br>
+
+(1) HashSet 사용해서 중복원소 없애기<br>
+
+HashSet은 ```자바 Collection``` 중 Set의 대표적인 HashSet 클래스 입니다<br>
+HashSet 을 이용하면 나머지 값이 HashSet 원소에 저장되는데 이 과정에서 중복값들은 저장되지 않는점이 있습니다<br>
+
+정리하면 새로운 값은 저장이 되지만 중복되는 값은 저장하지 않는다는것 입니다<br>
+출력할땐 HashSet의 ```size ``` 를 반환하며 이것이 ```서로 나머지 값이 다른 원소의 집합``` 이 되는 것 입니다<br>
+
+
+(2) HashSet 선언하기<br>
+
+```java
+HashSet<Integer> hs = new HashSet<Integer>();
+```
+처음 선언할때 HashSet 에는 Integer로 만들었기 때문에 자료형은 int형 혹은 Integer 클래스를 정의한 부분입니다<br>
+오직 ``` int `` 자료형만 취급하게 됩니다<br>
+
+(3) 배열에 데이터를 넣기
+
+```java
+for (int i = 0 ; i < arr.length ; i ++) {
+   ★ arr[i] = Integer.parseInt(br.readLine()) % 42;
+    hs.add(arr[i]);
+}
+```
+
+★ 부분은 배열에 데이터를 입력하여 채워넣게되고 HashSet 참조변수인 `` hs `` 로 add() 메소드를 사용하여<br>
+배열에 데이터를 추가할 때 마다 ``` 원소의 집합 `` 이 이루어지면서 중복되는값은 저장하지 않게 될것입니다<br>
+
+※ add 메소드에서 값을 넣을 때 중복되는 값이 없으면 HashSet에 저장되고 True 를 반환하고<br>
+  중복되는 값들이 존재하면 False 를 반환합니다.<br>
+
+
+(4) 결과 출력
+
+```java
+System.out.println(hs.size());
+```
+
+HashSet의 size() 메소드를 이용하여 원소들을 반환하여 출력하면 끝나게 됩니다<br>
+자바에서 Collection은 매우 중요한 개념이니 더 많은 포스팅 주제가 될것같습니다<br>
+
+
+
