--- a/_posts/2021-03-28-java22.md
+++ b/_posts/2021-03-28-java22.md
@@ -1,5 +1,5 @@
 ---
-title: Java 04 - 클래스 , 객체 , 메소드 (3) - 클래스 기초 + 객체 생성과 사용
+title: Java 04 - 클래스 , 객체 , 메소드 (3-1) - 클래스 기초 + 객체 생성과 사용 (1)
 author: Kim
 date: 2021-03-28 02:21 +0900   # 2019-08-20 19:34:00 0900
 categories : ["Java", ""]
@@ -178,3 +178,157 @@ tv ->  volume  | 0
 ```
 ※ 참조변수 ``` tv``` 는 Television 클래스의 객체 참조값이 저장합니다<br>
 
+
+# 참조 변수
+
+자바에서는 보통 변수를 2 가지로 나눌수 가 있습니다<br>
+
+* (1) Primitive Variable - 기초 변수 <br>
+※ 기본자료형 : int long float double char ...<br>
+
+* (2) Reference Variable - 참조 변수
+
+참조 변수는 ```객체를 참조 할때 사용되는 변수 ``` 입니다 여기에서 객체의 참조값이 저장됩니다<br>
+※ 참조 변수는 일반적으로 객체의 주소를 뜻합니다<br>
+
+### 객체 멤버 접근
+
+객체가 생성되고 나면 객체를 이용하여 필드나 메소드를 참조하려면 참조변수에 ```.``` 연산자를 이용합니다<br>
+
+```java
+Television tv = new Television();
+tv.channel = 7;
+tv.volume = 30;    tv 참조 변수에 . 연산자를 이용하여 접근
+tv.onOff = true;
+```
+위와 같이 접근했을때 객체 안의 값들은 다음과 같이 저장됩니다<br>
+
+``` java
+
+       channel | 7
+tv ->  volume  | 30
+       onOff   | true
+```
+
+※ 필드라는 이름 대신 ``` 인스턴스 변수 ``` 용어와 같은 의미로 쓰이기도 하는데 이 말은<br>
+각 인스턴스(객체) 가 ``` 자체적으로 가지고 있는 변수 ``` 입니다
+
+
+### 객체는 여러 개 생성된다
+
+객체를 여러 개 생성할 수 있습니다 각 객체는 클래스에 정의된 필드의 자체 복사본을 가지고 있습니다<br>
+따라서 하나의 객체에 들어 있는 변수의 내용은 다른 객체에 들어 있는 변수의 내용과 다르게 되어서<br>
+
+각 객체들은 같은 타입의 객체가 있다고 가정할때 각각 TV 객체의 채널 볼륨 전원 상태는 서로 다를수 있습니다<br>
+
+```java
+package Blog_part04;
+
+
+public class TelevisionRun02 {
+    int channel;
+    int volume;
+    String model = "";
+    boolean onOff;
+
+    public static void main(String [] args){
+
+        TelevisionRun02 tv1 = new TelevisionRun02();
+
+        tv1.model = "A";
+        tv1.channel = 5;
+        tv1.volume = 20;
+        tv1.onOff = true;
+        String sbs = "SBS";
+
+        TelevisionRun02 tv2 = new TelevisionRun02();
+
+        tv2.model = "B";
+        tv2.channel = 7;
+        tv2.volume = 45;
+        tv2.onOff = true;
+        String kbs = "KBS";
+
+
+        TelevisionRun02 tv3 = new TelevisionRun02();
+
+        tv3.model = "C";
+        tv3.channel = 11;
+        tv3.volume = 60;
+        tv3.onOff = true;
+        String mbc = "MBC";
+    }
+}
+```
+
+위 코드를 출력 한 결과는 다음과 같습니다<br>
+
+```java
+제품 모델 : A
+채널 번호 : 5 /  SBS
+현재 볼륨 : 20
+전원 상태 : true
+
+제품 모델 : B
+채널 번호 : 7 /  KBS
+현재 볼륨 : 45
+전원 상태 : true
+
+제품 모델 : C
+채널 번호 : 11 / MBC
+현재 볼륨 : 60
+전원 상태 : true
+```
+※ tv1 , tv2 , tv3 각각 데이터가 완전히 분리되어 있습니다
+
+다음은 참조 변수를 복사하면 과연 참조값이 복사되어 동일한 객체가되는지 위한 코드 입니다<br>
+
+``` java
+TelevisionRun02 tv = new TelevisionRun02();
+TelevisionRun02 tvE = tv;
+
+tv.channel = 100;
+System.out.println("참조변수 tv : "  +tv.channel);
+System.out.println("참조변수 tvE : " +tvE.channel);
+```
+
+결과는 동일한 값이 100을 출력하고 서로 다른 객체를 참조 하는 것 처럼 보였는데<br>
+실제로는 ``` 동일한 객체 ``` 를 참조한다는 걸 알수있었습니다<br>
+
+``` java
+
+       channel | 100
+tv ->  volume  | 0
+tvE->  onOff   | false
+```
+
+그럼 다음과 같은 코드가 있을때 실행 결과는 어떻게 될까요?<br>
+```java
+
+TelevisionRun02 tv = new TelevisionRun02();
+TelevisionRun02 tvE = tv;
+TelevisionRun02 tvN = new TelevisionRun02();
+tvE = tvN;
+
+tv.channel = 100;
+```
+
+위 코드를 출력하게 되면 ``` tvE 는 tvN ``` 이 가리키는 객체가 됩니다<br>
+
+```
+참조변수 tv : 100
+참조변수 tvE : 0
+참조변수 tvN : 0
+```
+
+``` java
+
+            channel | 100
+tv ->       volume  | 0
+            onOff   | false
+
+            channel | 0
+tvE,tvN ->  volume  | 0
+            onOff   | false
+```
+<a href = "/posts/java23">다음장</a>
