--- a/_posts/2021-03-28-java23.md
+++ b/_posts/2021-03-28-java23.md
@@ -18,19 +18,29 @@ comments : true
 
 * (1) 청소기를 킨다
 * (2) 청소기의 주입구가 먼지를 빨아들인다
-* (3) 청소기가 끈다
+* (3) 청소기를 끈다
+* (4) 바닥이 깨끗해진다
 
 ### 커피포트 작동
 
 * (1) 버튼을 눌러 물을 끓인다
 * (2) 물을 팔팔 끓인다
 * (3) 온도가 적정선 까지 끓여졌다면 작동을 멈춘다
+* (4) 뜨거운 물을 얻는다
 
-이와 같이 공통적으로 상황이 주어졌을때 행동하고 수행하는것이 메소드의 정의 일수도 있겠네요<br>
+이와 같이 공통적으로 상황이 주어졌을때 행동하고 수행하여 결과물을 나타냅니다<br>
+
+### 메소드를 사용하는 이유
+
+프로그래밍 에서는 똑같은 내용을 반복적으로 작업해야할 때가 있습니다 이때가 바로 필요한 것은 메소드 인데<br>
+예를들어 작업하는 일이 여러 번 반복해서 사용된다는 건 또다시 사용할 만한 가치가 있는 부분 이라는 뜻으로<br>
+이러한 경우  하나로 묶어 ``` 어떤 입력값을 주었을때 ~ 에 맞는 리턴값을 돌려준다 ``` 에 메소드가 있으면 편리합니다<br> 
+
+
 
 # 메소드 어떻게 작동 시켜볼까 ? 
 
-새로운 클래스 ``` Flower ``` 를 만든 예제 입니다<br>
+새로운 클래스 ``` Flower ``` 로 만든 예제 입니다<br>
 
 ```java
 
@@ -58,23 +68,23 @@ public class Flower {
 }
 ```
 여기서 ``` void print()``` 메소드를 만들었는데 이것이 하는 역할은 Flower 객체의 정보를 화면에 출력합니다<br>
-Flower 객체는 꽃 , 가격 , 판매처 변수를 별도로 가지고 있기 때문에 main에서 ``` print ``` 를 호출하면<br>
+Flower 객체는 ```꽃 , 가격 , 판매처``` 변수를 별도로 가지고 있기 때문에 main에서 ``` print ``` 를 호출하면<br>
 객체의 필드를 출력하고 있는 상황입니다<br>
 
-``` a.print()``` 는 참조변수 a에 대하여 print() 를 호출할 수 있고 호출된 것 을 멤버함수 라고 부르고<br>
-참조 변수가 가리키는 객체의 정보를 출력할 수 있습니다<br>
+``` a.print()``` 는 참조변수 a에 대하여 print() 를 호출할 수 있고 호출된 것 을 ```멤버함수``` 라고 부르고<br>
+참조 변수가 가리키는 ```객체의 정보를 출력```할 수 있습니다<br>
 ※ Flower 객체가 가지고 있는 메소드를 호출<br>
 
-### 인수와 매개변수 그리고 return
+# 인수와 매개변수 그리고 return
 
-메소드가 종료되려면 ``` return ``` 문장이 실행되면 종료하게 되는데 이 키워드가 하는 역할은<br>
+메소드가 종료되려면 ``` return ``` 키워드를 실행시켜 종료하게 되는데 이 키워드가 하는 역할은<br>
 무언가 의 데이터를 ``` 반환 ``` 하고 종료됩니다 간단한 구조상 다음과 같이 볼수 있는데<br>
 
 ```java
 
-int add(int num , int num2){
+int add(int a , int b){
 
-    return num + num2
+    return a + b
 }
 ```
 여기서 ``` return ``` 은 변수 a , b 의 연산 결과를 반환 후 메소드를 종료시킵니다<br>
@@ -140,8 +150,8 @@ public int plus(int x , int y){
 }
 ```
 
-인수는 ```호출하는 곳에서 plus를 호출시``` 전달하는 값을 ``` 인수 (argument)``` 라고 부릅니다<br>
-멤버함수 에서 ```값을 받을 때``` 사용하는 변수는 ```매개 변수``` 입니다<br>
+인수는 ``` main()에서 plus() 를 호출할때 ``` main()에서 전달하는 값을 ``` 인수 (argument)``` 라고 부릅니다<br>
+멤버함수 에서 ```값을 받을 때``` 사용되는 변수는 ```매개 변수``` 입니다<br>
 
 이 프로그램은 scan 으로 입력받은 정수를 참조변수 a로 부터 호출한 멤버함수 plus에 대입 하게 되면<br>
-```plus()``` 매개변수 int x , int y 가 정수 값을 받고 ``` return ``` 하게 되는 것 입니다<br>
+```plus()``` 매개변수 int x = (num) , int y = (num2) 는 두 개의 입력값을 더한 값을 return 하여 결과를 내보냅니다<br>
