--- a/_posts/2021-03-25-java20.md
+++ b/_posts/2021-03-25-java20.md
@@ -11,13 +11,12 @@ comments : true
 
 * (1) 객체 지향 프로그래밍이란?
 * (2) 객체 지향 프로그래밍의 특징
-* (3) 클래스 기초 + 객체 생성과 사용 (1)
-* (4) 클래스 기초 + 객체 생성과 사용 (2)
-* (5) 추상화 다형성 상속 각 특징 과 예제로 통한 학습
-* (6) 메소드 + 자동차 클래스 작성하기
-* (7) 메소드 오버로딩
-* (8) UML
-* (9) String 클래스
+* (3) 클래스 기초 + 객체 생성과 사용 (1) - Class 
+* (4) 메소드 기초 + 객체 생성과 사용 (2) - Method
+* (5) 메소드 오버로딩
+* (6) 추상화 다형성 상속 각 특징 과 예제로 통한 학습
+* (7) UML
+* (8) String 클래스
 
 ※ 학습목표 : ```객체 지향 프로그램```의 기초 개념에 대하여 학습하고 클래스의 개념 + 객체가 생성되는방법<br>
              ```참조변수```에 대한 이해와 ```메소드``` 작성방법 메소드의 반환값 매개변수 생성자 등등<br>
