--- a/_posts/2021-03-28-java23.md
+++ b/_posts/2021-03-28-java23.md
@@ -1,5 +1,5 @@
 ---
-title: Java 04 - 클래스 , 객체 , 메소드 (3-2) - 클래스 기초 + 객체 생성과 사용 (2)
+title: Java 04 - 클래스 , 객체 , 메소드 (3-2) -메소드 기초 + 객체 생성과 사용 (2) -Method
 author: Kim
 date: 2021-03-28 02:21 +0900   # 2019-08-20 19:34:00 0900
 categories : ["Java", ""]
