java 포스팅 시작(27)
- 추상화 클래스 포스팅 중
- 그외 포스팅 내용 수정

--- a/_posts/2021-03-25-java20.md
+++ b/_posts/2021-03-25-java20.md
@@ -14,9 +14,11 @@ comments : true
 * (3) 클래스 기초 + 객체 생성과 사용 (1) - Class 
 * (4) 메소드 기초 + 객체 생성과 사용 (2) - Method
 * (5) 메소드 오버로딩
-* (6) 추상화 다형성 상속 각 특징 과 예제로 통한 학습
-* (7) UML
-* (8) String 클래스
+* (6) 추상화 클래스
+* (7) 다형성
+* (8) 상속
+* (9) UML
+* (10) String 클래스
 
 ※ 학습목표 : ```객체 지향 프로그램```의 기초 개념에 대하여 학습하고 클래스의 개념 + 객체가 생성되는방법<br>
              ```참조변수```에 대한 이해와 ```메소드``` 작성방법 메소드의 반환값 매개변수 생성자 등등<br>
