--- a/_posts/2021-03-28-java23.md
+++ b/_posts/2021-03-28-java23.md
@@ -154,4 +154,4 @@ public int plus(int x , int y){
 멤버함수 에서 ```값을 받을 때``` 사용되는 변수는 ```매개 변수``` 입니다<br>
 
 이 프로그램은 scan 으로 입력받은 정수를 참조변수 a로 부터 호출한 멤버함수 plus에 대입 하게 되면<br>
-```plus()``` 매개변수 int x = (num) , int y = (num2) 는 두 개의 입력값을 더한 값을 return 하여 결과를 내보냅니다<br>
+```plus()``` 매개변수 int x = (num) , int y = (num2) 는 두 개의 입력값을 연산 후 return 하여 결과를 내보냅니다<br>
