블로그 포스팅 내용 수정
- 4 / 10 ~ 4 / 11 포스팅 업데이트

--- a/_posts/2021-04-10-BackJoon05.md
+++ b/_posts/2021-04-10-BackJoon05.md
@@ -19,10 +19,10 @@ comments : true
 중요한 것은 고정 비용은 몇 대를 생상하던 절대 변하지 않는 비용 이라는 것인데<br>
 
 예를들어 A가 100 이라고 하였을 때 상품을 100개를 생산하든 1000개를 만들던간에<br>
-A는 게속 100 이라는 것 입니다 문제에서 보면 N개를 생산할 때 이익이 발생하는 지점을 출력하면 되는데<br>
+A는 게속 100 이라는 것 입니다 문제에서 보면 N개를 생산할 때 이익이 발생하는 지점을 출력합니다<br>
 
-n * 상품가격 고정비용 + (n * 가변비용) 이를 만족하는 n을 찾는 문제이고<br>
-즉 상품 가격 * n개는 수입이라는 결론이 나므로 n * C 가 총 수입 이라는 뜻이 됩니다<br>
+<!-- n * 상품가격 고정비용 + (n * 가변비용) 이를 만족하는 n을 찾는 문제이고<br> -->
+<!-- 즉 상품 가격 * n개는 수입이라는 결론이 나므로 n * C 가 총 수입 이라는 뜻이 됩니다<br> -->
 
 좀더 이해하기 쉽게 다음과 같은 예를 들어보겠습니다<br>
 
@@ -48,9 +48,10 @@ n대가격 역시 비례하여 증가하고 n이 11일때 수익이 발생하므
  
  ``` java
   A
-------  +1
+------  +1 | 100 / 1000 + 1
 C - B
 ```
+
 +1을 해주는 이유는 총 비용과 총 수익이 같아지는 지점일때 +1을 하여 이익이 나는 지점을 만들어 줍니다<br>
 위 공식대로 한다면 이익이 발생하는 판매량의 개수를 나타낼 수 있다는 것 입니다<br>
 
