--- a/_posts/2021-04-10-BackJoon03.md
+++ b/_posts/2021-04-10-BackJoon03.md
@@ -12,18 +12,18 @@ comments : true
 
 # Solution 1
 
-* (1) ArrayList 와 HashSet을 이용하여 수 정렬시키기
-* (2) 배열에서 데이터가 중복되는 것을 제거하고 정렬한다
+* (1) ArrayList 이용하여 수 정렬시키기
+* (2) 자료구조 HashSet 사용해서 풀어보기
 
-처음에 어떻게 풀면 좋을지 곰곰히 생각해보다가 ArrayList의 contains() 메소드를 통해서<br>
-데이터를 ArrayList를 담을때 이전에 담은 값이 포함되있는지 중복되는 것을 확인할수 있는 글을 찾게되었습니다<br>
+처음에 예제 입력 1을 보고 ```5 5 2 3 4 1``` 을 정렬시켜야 되는줄 알고 삽질을 하였지만<br>
+알고보니 5 5 2 3 4 1 을 중복체크 후 정렬 시키는 것이 아니라 첫째 줄의 개수는 5 라는 걸 알고<br>
+5 2 3 4 1 을 정렬 시키는거구나.. 라고 다시 이해하게 되었습니다<br>
 
-자료구조인 HashSet을 사용하고 HashSet은 기본적으로 중복되는 집합체는 포함하지 않는 특징을 가지고있어<br>
-먼저 배열에 데이터를 담은 후 HashSet 안에 add를 해준다음 ArrayList의 contains() 메소드를 활용해도 좋지만<br>
-Collections 객체를 사용하여 풀어본다면 <br>
-
-이 문제를 풀수 있을 것 이라고 확신하게 되었습니다<br>
-
+그래서 사용하게된건 ArrayList와 HashSet을 사용하여 데이터를 처리 한 다음<br>
+마무리로 Collections 객체로 입력 된 값을 정렬시키는 것 입니다<br>
+<!-- 자료구조인 HashSet을 사용하고 HashSet은 기본적으로 중복되는 집합체는 포함하지 않는 특징을 가지고있어<br> -->
+<!-- 먼저 배열에 데이터를 담은 후 HashSet 안에 add를 해준다음 ArrayList의 contains() 메소드를 활용해도 좋지만<br> -->
+<!--  -->
 사용한 코드는 다음과 같습니다<br>
 
 ```java
@@ -40,7 +40,7 @@ public class Main {
         BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
         HashSet<Integer> hs = new HashSet<Integer>();
 
-        int testCase = Integer.parseInt(br.readLine());
+        int testCase = Integer.parseInt(br.readLine()); // 첫째 줄의 개수 
         int [] arr = new int[testCase];
 
         for (int i = 0 ; i < arr.length; i ++) {
@@ -58,9 +58,9 @@ public class Main {
 }
 ```
 
-테스트케이스 5를 입력받으면 배열에 길이가 테스트케이스 만큼 늘어지게 되고<br>
+첫째 줄에 수의 개수 5를 입력받으면 배열에 길이가 첫째 줄에 수의 개수 만큼 늘어지게 되고<br>
 for 반복문을 통하여 배열에 입력을 받은다음 HashSet 의 참조변수인 hs를 활용하여 add() 메소드에 담습니다<br>
-ArrayList 의 참조변수인 list 는 Collections 객체를 만들고 sort()메소드로 정렬시켜서<br>
+그다음 ArrayList 의 참조변수인 list 는 hs를 받아 Collections 객체안에 sort()메소드로 정렬 시킨다음<br>
 for-each 방식으로 값을 출력할 수 있게됩니다<br>
 
 
