--- a/_posts/2021-07-18-args.md
+++ b/_posts/2021-07-18-args.md
@@ -26,8 +26,8 @@ tags: [Java]
          ```String이 들어가면 문자열 데이터를 돌려보낸다는 의미가 됩니다```<br>
 
 이 모든 내용을 종합하면 메인메서드는 자바가 실행되면 제일먼저 동작하고<br>
-어떤 객체에서든 접근할 수 있으며 컴파일 되는순간 정의되고 돌려주는 값이 없는 메서드이다<br>
-라고 정리해볼 수 있겠네요<br>
+어떤 객체에서든 접근할 수 있으며 컴파일 되는순간 정의되고<br>
+돌려주는 값이 없는 메서드이다 라고 정리해볼 수 있겠네요<br>
 
 # String [] args
 
@@ -154,3 +154,14 @@ public class ArgsExample {
 	}
 }
 ```
+먼저 생각해본 것은 Scanner 클래스로 문자열을 입력받아서 대소문자 와 숫자를<br>
+배열에 넣고 Index를 비교하여 구별해줘야 겠다는 생각이 들었습니다<br>
+ 
+# 대소문자 + 숫자 판별하기<br>
+
+사용한 클래스 : Character<br>
+
+- isUpperCase() - ```영문 대문자``` 인지 여부를 판단하여 true 또는 false를 리턴합니다<br>
+- isLowerCase() - ```영문 소문자``` 인지 여부를 판단하여 true 또는 false를 리턴합니다<br>
+- isDigit() -```char 형 문자 하나가 숫자```인지 아닌지 검사하고 true 또는 false를 리턴합니다<br>
+
