- String 클래스 포스팅

--- a/_posts/2021-07-22-String.md
+++ b/_posts/2021-07-22-String.md
@@ -63,11 +63,21 @@ String name2 = new String("Kim");
 
 ※ ▲ String 클래스의 명시적 객체 생성 방법<br>
 
-※ 이미지 첨부 할 것 <br>
-※ 암시적 객체 명시적 객체 이미지 첨부 할 것<br>
+메모리 구조상 다음과 같이 그려보았습니다 <br>
+
+<img src = "/post/Java/string6.png">
+
+명시적 객체를 생성하면 주소의 번지가 제 각각 다르게 나옵니다<br>
+즉 영역이 개인마다 가지고 있다고 보면 되겠습니다<br>
+
+<img src ="/post/Java/string3.png"><br>
+
+※ 암시적 객체생성의 메모리구조<br>
+
+※ 동일한 문자열이라도 암시적 인지 명시적 인지 결과처럼 다른 곳을 참조하게 됩니다<br>
 
 정리하면 문자열을 암시적으로 생성하는지 아니면 명시적(new 연산자를 통한 객체 생성) 으로<br>
-생성하는것 인지 그것은 비교연산자를 사용하여 어떤 차이가 나는지 결과를 확인해볼수 있습니다<br>
+생성하는것 인지 그것은 비교연산자를 사용하면 어떤 차이가 나는지 결과를 확인해볼수 있습니다<br>
 
 ```java
 String name1 = "Kim"; // 암시적 객체
@@ -109,6 +119,131 @@ System.identityHashCode 메소드를 통해 객체 주소의 값을 10진수로 
 - name3 의 주소값 : 1521118594
 
 ## 객체 비교값 확인하기
+
+객체의 내용 비교값은 String 객체의 equals() 메소드를 사용하면 확인이 가능합니다<br>
+
+<strong> '==' 연산자와 equals() 메소드의 차이</strong><br>
+
+- equals() : 비교하고자 하는 대상의 내용 자체를 비교할 때
+
+- '==' : 비교하고자 하는 대상의 주소값을 비교한다
+
+```java
+package class_study;
+
+public class StringExample {
+	public static void main(String[] args) {
+		
+		String name1 = "Kim";
+		String name2 = "Kim";
+		String name3 = new String("Kim");
+		
+		
+		if (name1 == name2) {
+			System.out.println("name 1 과 name2 는 주소가 같다." + true);
+		}else {
+			System.out.println("name 1 과 name2 는 주소가 다르다." + false);
+		}
+        // name 1 과 name2 는 주소가 같다.true
+		
+		if (name1 == name3) {
+			System.out.println("name 1 과 name3 는 주소가 같다." + true);
+		}else {
+			System.out.println("name 1 과 name2 는 주소가 다르다." + false);
+		}
+        // name 1 과 name2 는 주소가 다르다.false
+
+		if (name1.equals(name2)) {
+			System.out.println("문자열 내용이 같다." + true);
+		}else {
+			System.out.print("문자열 내용이 다르다 " + false);
+		}
+        // 문자열 내용이 같다.true
+
+		
+		if (name1.equals(name3)) {
+			System.out.println("문자열 내용이 같다." + true);
+		}else {
+			System.out.print("문자열 내용이 다르다 " + false);
+		}
+        //  // 문자열 내용이 같다.true
+		
+		String name4 = new String("커피");
+		String name5 = new String("커피");
+		
+		if(name4.equals(name5))
+			System.out.println(true);
+		else 
+			System.out.println(false);
+        // true    
+	}
+}
+```
+※ 참조를 잃는 String 객체는 가비지 컬렉션을 구동시켜 메모리에서 자동제거 됩니다<br>
+
+```java
+String coffee = "아메리카노";
+coffee = null; // 가비지 컬렉션 : 제거대상이군
+```
+
+# String 객체는 불변성 특징을 가진다
+
+자바의 String은 불변성 특징을 가지고 있습니다<br>
+
+- Immutable : 변경할 수 없는
+
+String 객체는 최초에 한번 생성되면 절대로 그 값이 변하지 않습니다<br>
+그래서 불변성을 가진다 라는말이 있는 것 같습니다 뭔가 상수의 개념이랑 비슷하지만..<br>
+
+그럼 왜 불변성을 가지는지 알아보도록 하겠습니다<br>
+
+```java
+String coffee = "Ediya";
+coffee = "Kanu";
+```
+
+위와 같이 객체가 생성된 이후 Ediya 를 Kanu 로 바꾼다 한들<br>
+실제 내부적으로는 최초에 생성된 Ediya 의 값이 변경된 것이 아닌<br>
+
+새로운 객체가 생성되어 참조가 coffee 변수에 할당 됩니다<br>
+
+이 말은 Heap 영역에는 최초에 생성된 Ediya 와 Kanu 의 객체가 존재<br>
+하고 있다는 것 입니다 이걸 그림으로 표현하면 다음 과 같습니다<br>
+
+<img src ="/post/Java/string7.png"><br>
+
+```java
+String coffee = "Ediya";
+coffee = "Kanu";
+System.out.println(coffee);
+
+출력
+Kanu
+```
+
+## 왜 불변객체 라고 부르는 걸까 ?
+
+String은 가장 많이 사용되는 데이터 타입중 하나라고 생각됩니다 그렇기 때문에<br>
+메모리 공간의 사용빈도를 보면 String 객체가 가장 많을 것 입니다<br>
+
+불변객체라고 불리는 이유는 문자열 객체는 재사용 될 가능성이 높기때문에<br>
+프로그램 당 하나의 String 객체만을 생성해서 Heap 영역을 절약하려고 했기 때문입니다<br>
+
+new 연산자로 객체를 생성하면 Heap 영역에 "새롭게" 등록되기 때문에 만약 String 객체가<br>
+명시적 객체만으로 생성해야 한다면 메모리에 부담이 엄청날 거라고 예상 해 봅니다<br>
+
+프로그램을 만들면 사용자가 사용할 수 있도록 설명이 필요하고 버튼 마다<br>
+텍스트가 들어가고 버튼 안에서도 "글자" 는 항상 존재하기때문에<br>
+
+생각만해도 메모리에 영향이 엄청날 것입니다.<br>
+
+정리하면 메모리 절약을 위한 방법 입니다<br>
+
+※ 메모리 절약도 중요하지만 속도에도 영향이 간다<br>
+※ String 객체들은 Heap 영역의 String Pool 이라는 특별한 공간에 저장된다<br>
+
+
+
 
 
 
