--- a/_posts/2021-03-30-java24.md
+++ b/_posts/2021-03-30-java24.md
@@ -1,10 +1,11 @@
 ---
-title: Java 04 - Call by Value || Call by reference
+title: Call by Value || Call by reference
 author: Kim
 date: 2021-03-30 06:42 +0900   # 2019-08-20 19:34:00 0900
 categories : [Java]
 tags: [Java]
 comments : true
+pin : true
 ---
 
 
@@ -174,3 +175,168 @@ reference 가 참조하는 객체의 값을 변경하고 있는 과정입니다<
 
 * ★ Call by reference : 해당 객체의 주소값을 직접 넘기는 것이 아닌<br>
     객체를 보는 ``` 또 다른 ``` 주소값을 만들어서 넘기게 됩니다!!<br>
+
+## 다시 정리해보는 Call by value , Call by reference
+
+ Call by value Call by reference 이 두 내용은 메소드에서 인자값을 받을 때<br>
+`어떤식으로 받아 올 것 인지에 대한 방식이다`<br>
+
+값에 의한 호출 인가 아니면 참조에 의한 호출인가 이 두 가지 단어로 예시를 들어보겠습니다<br>
+
+- Call by value
+
+메소드 호출 시에 사용되는 인자의 메모리에 저장되어 있는 값을 복사하여 보내는 방식
+즉 값에 의한 호출 방식 입니다<br>
+
+예를들어 int a = 10 이라는 변수에 값을 대입 한 상태에서 이 자체를 주소를 받는게 아닌<br>
+단순히 변수 a의 값 10을 받아 처리하는 방식입니다<br>
+
+- Call by reference
+
+메소드 호출 시 사용되는 인자 값의 메모리에 저장되어있는 `주소` 를 복사하여 보내는방식<br>
+즉 참조에 의한 주소 값을 보내는 방식입니다<br>
+
+※ 자바는 항상 Call by value 방식으로 인자값을 받는다.<br>
+
+## 값에 의한 호출 방식 - 인자값으로 기본형을 사용했을 때
+
+```java
+package personal_study;
+
+public class CallbyValueTest {
+	
+	public void swap(int x, int y){
+		int temp ; // 임시변수
+		temp = x;
+		x = y;
+		y = temp;
+	}
+	
+	public static void main(String[] args) {
+		CallbyValueTest cbv = new CallbyValueTest();
+		
+		int first = 10;
+		int last = 20;
+		
+		System.out.println("Swap 전");
+		System.out.println("first => " + first);
+		System.out.println("last  => " + last);
+		
+		cbv.swap(first, last);
+		
+		System.out.println("Swap  후");
+		System.out.println("first => " + first);
+		System.out.println("last  => " + last);
+	}
+}
+출력
+Swap 전
+first => 10
+last  => 20
+
+Swap  후
+first => 10
+last  => 20
+```
+
+위 코드중 swap 메소드를 호출한 후에도 그대로 값이 유지된 것을 알 수 있습니다<br>
+이 결과를 통해 알 수 있는것은 메소드 안에서 아무리 두 수의 위치를 바꾼다고 한들<br>
+
+`원본데이터` 는 절대 바뀌는 것이 아니라는 것 입니다 메소드 내에서 두 수를 바꾸는 행위는<br>
+복사된 값을 바꾸는 것에 불과합니다 이렇게 자바는 기본형 데이터를 처리할 때<br>
+
+값에 의한 호출 방식 - Call by value 형식으로 처리됩니다<br>
+
+그렇다면 객체를 전달했을 때는 어떤 결과가 나오는지 알아보도록 하겠습니다<br>
+
+## 참조에 의한 주소값을 보내는 방식
+
+```java
+package personal_study;
+
+public class CallbyReferenceTest {
+	
+	static void swap(Numbers num1, Numbers num2) {
+		int temp;	// 지역변수
+		
+		temp = num1.num; // 10
+		num1.num = num2.num; // 20
+		num2.num = temp; // 10
+	}
+	
+	public static void main(String[] args) {
+		// TODO Auto-generated method stub
+		Numbers first = new Numbers(10);
+		Numbers last = new Numbers(20);
+		
+		System.out.println("Swap 전 ");
+		System.out.println("first = " + first.num);
+		System.out.println("last = " + last.num);
+		System.out.println("===================");
+		
+		
+		swap(first, last);
+		
+		System.out.println("===================");
+		System.out.println("Swap 후 ");
+		System.out.println("first = " + first.num);
+		System.out.println("last = " + last.num);
+	}
+	// 자리 바꾸기 메소드
+}
+class Numbers {
+	int num;
+	
+	Numbers (int num) {
+		this.num = num;
+	}
+}
+출력
+Swap 전 
+first = 10
+last = 20
+===================
+===================
+Swap 후 
+first = 20
+last = 10
+
+```
+
+주목해야 할 점은 객체의 참조값을 직접 바꾼것이 아니라 객체의 참조값을 통해서<br>
+객체의 멤버변수에 접근 후 값을 바꿧다는 점 입니다<br>
+
+자바의 특성중 객체를 메소드로 넘길 때 객체를 참조하는<br>
+지역변수는 실제 주소가 아닌 지역변수가 가리키고 있는 Heap 영역의 객체를<br>
+
+새로운 지역변수로 생성하여 같은 객체를 가리키도록 하는 방식이라는 것 입니다<br>
+
+```java
+public static void main(String[] args) {
+  
+    Numbers first = new Numbers(10);
+    Numbers last = new Numbers(20);
+```
+
+
+```java
+static void swap(Numbers num1, Numbers num2) {
+    int temp;	// 지역변수
+    
+    temp = num1.num; // 10
+    num1.num = num2.num; // 20
+    num2.num = temp; // 10
+}
+```
+Main 메소드에서 참조하는 Heap 영역의 데이터를 swap 메소드에서도 새로운 지역변수를<br>
+통해서 참조하는 것을 볼 수 있습니다
+
+정리하면 swap메소드 호출인자 first 와 last는 메모리에 저장 된 주소 값을 복사하여<br>
+매개변수 num1 과 num2에 메모리에 저장한 후 10 과 20이 저장되어 있는<br>
+
+주소값을 참조하여 연산하기 때문에 원본 데이터가 변하게 되는 것 입니다<br>
+
+※ Call by reference 는 메소드 호출 시 사용되는 인자 값의 메모리에 저장되어있는<br>
+주소를 복사하여 보내는 방식이다<br>
+
+※ 메소드 호출 시에 사용되는 인자는 값이 아닌 주소를 넘겨주고 참조한다<br>
