--- a/_posts/2021-08-02-Set.md
+++ b/_posts/2021-08-02-Set.md
@@ -5,3 +5,91 @@ date: 2021-08-03 01:00:00 +0900
 categories : [Java]
 tags: [Java]
 ---
+
+# HashSet
+
+HashSet 은 Set 컬렉션 클래스에서 많이 사용되는 것 중 하나이고 이 클래스의 특징은<br>
+해시 알고리즘을 사용하여 검색속도가 매우 빠르다는 점이 있다고 한다<br>
+
+HashSet 클래스는 내부적으로 HashMap 과 같은 인스턴스를 이용하여 요소를 저장하는데<br>
+순서에 상관없이 저장하며 `중복된 값은 허용하지 않으며 저장하지 않는다`<br>
+
+## 예제 (1)
+
+- 제네릭 타입은 String 을 사용한다
+- 중복값이 존재할때 어떻게 저장되는지 확인한다
+
+```java
+package CollectionFramework;
+
+import java.util.HashSet;
+import java.util.Iterator;
+
+public class HashSetTest {
+	public static void main(String[] args) {
+		
+    HashSet<String> data = new HashSet<String>();
+    
+    /* add() 메소드를 통해 요소를 저장 */		 
+    data.add("Kim");
+    data.add("Nam");
+    
+    
+    /* add() 메소드를 통해 "Kim" 저장 시도 결과 */
+    System.out.println(data.add("Kim")); // false 반환
+    
+    /* add() 메소드를 통해 "Kim2" 저장 시도 결과 */
+    System.out.println(data.add("Kim02")); // true 반환
+    
+    System.out.println("========================");
+    
+    /* for - each 결과출력 */
+    for(String res : data) {
+        System.out.println(res);
+    /* Result : Kim02 Nam Kim */
+    }	
+    
+    /* add() 메소드를 통해 순서를 바꾼다 */
+    data.add("Nam");
+    data.add("Kim02");
+    data.add("Kim");
+    
+    System.out.println("========================");
+    
+    Iterator<String> iter = data.iterator();
+    while(iter.hasNext()) {
+        System.out.println(iter.next());
+    }
+	}
+}
+```
+
+<strong>출력</strong><br>
+
+```java
+false
+true
+========================
+Kim02
+Nam
+Kim
+========================
+Kim02
+Nam
+Kim
+```
+
+위 예제에서 요소의 저장 순서를 바꿔봐도 저장되는 순서에는 영향을 미치지 않는다는 것을<br>
+확인해 볼 수 있다 추가로 add() 메소드를 사용하여 이미 존재하고 있는 `"Kim"` 요소를<br>
+추가하려고 시도했을때 `false` 를 반환하고 요소를 저장하지 않는다<br>
+
+
+# TreeSet
+
+TreeSet 클래스는 데이터가 정렬된 상태로 저장되는 `이진 검색 트리` 의 형태로<br>
+요소를 저장한다 이진 검색 트리는 데이터를 추가하거나 제거하는 등<br>
+기본적으로 동작 시간이 매우 빠르다는 점이 있다<br>
+
+HashSet 과 다른점은 요소들이 모두 정렬된 상태로 저장할 수 있다<br>
+
+
