- 상속 개념 포스팅 (2)

--- a/_posts/2021-08-04-extends.md
+++ b/_posts/2021-08-04-extends.md
@@ -255,7 +255,476 @@ public static void main(String[] args) {
   }
 }
 ```
+<strong>출력</strong><br>
 
+```java
+이름 : Kim
+나이 : 27
+성별 : Man
+주소 : 서울
+```
 
+# 상속에서의 접근 제한자
 
+- Private : 클래스 내부에서만 접근 가능하며 외부에서는 사용할 수 없다
 
+- Public : 모든 클래스에서 접근 가능하다
+
+- Default : 같은 패키지 내의 클래스에서만 접근 가능하다
+
+- Protected : 같은 패키지내의 클래스 뿐만 아니라 다른 클래스의 `자식` 에게도 접근 가능하다<br>
+
+```java
+package Inheritance;
+
+class Ex4Value {
+	
+	private int a = 10;
+	private int b = 20;
+	private int c = 30;
+	
+	void setA(int a) {
+		this.a = a;
+	}
+	protected void setB(int b) {
+		this.b = b;
+	}
+	
+	private void setC(int c) {
+		this.c = c;
+	}
+	
+	public int getA() {
+		return a;
+	}
+	
+	public int getB() {
+		return b;
+	}
+	
+	public int getC() {
+		return c;
+	}
+	
+} // end of Ex4Value class
+
+class Ex4Test extends Ex4Value{
+	String testM; // Default
+	
+	public String getTestM() {
+		return testM;
+	}
+	
+	public void setTestM(String testM) {
+		this.testM = testM;
+	}
+	
+}// end of Ex4Test class
+
+public class Ex4 {
+	
+	public static void main(String[] args) {
+		
+		Ex4Test run = new Ex4Test();
+		
+		run.setA(1120);
+		run.setB(1150);
+		run.setTestM("Result");
+		
+		System.out.println(run.getTestM() + " : "
+                         + run.getA() + " " +
+                           run.getB());		
+	}
+}
+```
+
+여기서 알수있는것은 run.setB() 메소드에 값을 지정해줄 수 없다 그 이유는 Ex4Value 클래스에<br>
+아래와 같은 코드 때문에 외부로부터 값을 얻을수도 넣을수도 없기 때문이다<br>
+
+```java
+private void setC(int c) {
+	this.c = c;
+}
+```
+※ 외부는 Ex4 클래스를 지정한 것이다<br>
+
+# 오버라이딩 규칙을 알아보자
+
+- 오버라이딩 : 부모클래스의 메소드를 재정의하여 자식클래스에서 재사용하기 위한 행위를 의미한다<br>
+※ : 멤버변수 포함<br>
+
+부모클래스의 멤버를 자식클래스가 가지고 있는 경우를 `오버라이드` 라는 용어가 있다<br>
+
+## 오버라이딩 규칙
+
+접근 제한자는 부모의 것과 같거나 부모의 것 보다 접근을 더 허용하는 쪽으로 사용해야 한다<br>
+
+- 옳은예시 : private -> public -> default -> public
+
+- 틀린예시 : public -> private -> public -> default
+
+## 오버라이딩 목적
+
+그럼 오버라이딩은 왜 쓰는걸까 ? 위에 오버라이딩의 개념은 부모클래스의 메소드를 재정의하여<br>
+자식클래스에서 재사용하기 위한 행위라고 하였다<br>
+
+※ 메소드 뿐만 아니라 멤버변수도 가능하다<br>
+
+이 말은 곧 부모클래스의 멤버를 더 많은 기능을 확장할 수도 있다는 말이 된다<br>
+다음 예제를 통해 알아보도록 하자<br>
+
+## 오버라이딩 - 예제 1
+
+- Class Parent
+
+부모클래스 Parent 에는 noteBook 과 money 라는 멤버필드를 가지고있다<br>
+
+```java
+package Inheritance;
+
+public class Parent {
+	
+	protected String noteBook ="Hp노트북";
+	protected String money ="80만원";
+}
+```
+
+- Class Child
+
+자식클래스에서 부모클래스의 멤버변수를 물려받은 후<br>
+getMessage() 메소드에서 구매여부 기능을 확장한 아주아주 기초적인 코드를 작성하였다<br>
+
+```java
+package Inheritance;
+
+public class Child extends Parent{
+
+//  물려받고 싶지 않을땐 이렇게 재정의 할수있다
+	boolean check = false;
+
+	void getMessage() {
+		System.out.println("부모님의 노트북 : " + super.noteBook); // 부모클래스
+		System.out.println("당시 구매가격 : " + super.money); // 부모클래스
+		System.out.println("고장여부 : " + this.check); // 자기자신
+	}
+}
+```
+
+- Class RunTest
+
+결과는 다음 과 같다<br>
+
+```java
+package Inheritance;
+
+public class RunTest {
+	public static void main(String[] args) {
+
+		Child child = new Child();
+		child.getMessage();
+	}
+}
+```
+
+<strong>출력</strong><br>
+
+```java
+부모님의 노트북 : Hp노트북
+당시 구매가격 : 80만원
+고장여부 : false
+```
+
+## 오버라이딩 - 예제 2
+
+- Class Parent
+
+ 부모클래스의 동물은 킁킁 소리를 내며 앞으로 걷는다는 내용이 들어가있다<br>
+
+```java
+package Inheritance;
+
+public class Parent {
+	
+	public String scream = "킁킁";
+	public String running = "걷는다";
+	
+	public void getRunning() {
+		System.out.println("부모님의 동물은 " + 
+	            scream + " "
+				+ " 소리를 내고 "
+				+ " 앞으로" + running);
+	}
+}
+```
+
+- Class Child
+
+자식 클래스에서 아무런 내용없이 부모클래스를 상속만 받았다<br>
+
+```java
+package Inheritance;
+
+public class Child extends Parent{
+
+}
+```
+
+- Class RunTest
+
+실행해보면 어떤 결과가 나올까?<br>
+
+```java
+package Inheritance;
+
+public class RunTest {
+	public static void main(String[] args) {
+		
+		Child child = new Child();
+		child.getRunning();		
+	}
+}
+```
+
+<strong>출력</strong><br>
+
+```java
+부모님의 동물은 킁킁  소리를 내고  앞으로걷는다
+```
+
+결과는 위와같이 부모클래스의 메소드를 출력할 수 있지만 좀더 구체적인 내용이 들어가려면<br>
+어떻게 하면 좋을까 ? 이럴때는 오버라이딩 개념을 사용하면된다<br>
+
+자식클래스에서 부모클래스의 메소드를 `재정의` 하여 기능을 확장시키는 것 이다<br>
+
+- Class Child
+
+```java
+package Inheritance;
+
+public class Child extends Parent{
+	
+	public String color = "황갈색";
+	public String food = "소고기";	
+
+	// 부모메소드 재정의
+	@Override
+	public void getRunning() {
+		scream = "어흥";
+		running = "빠르게 달린다";
+		System.out.println(color + " 사자는 " + scream + " 소리를  내며 " + running);
+		System.out.println("좋아하는 먹이는 " + food + " 이다 ");
+	}
+}
+```
+
+메소드를 위와같이 재정의하여 출력을 하면 다음과 같은 결과가 나온다<br>
+
+```java
+황갈색 사자는 어흥 소리를  내며 빠르게 달린다
+좋아하는 먹이는 소고기 이다 
+```
+
+# 상속간의 참조 범위
+
+참조의 범위 - 상속되는 멤버의 제한과 은폐 <br>
+
+부모 클래스의 기능을 은폐시키기 위한 방법이다 그 이유는 자식 클래스에서 부모 클래스의<br>
+
+멤버변수 혹은 메소드를 재정의하여 기능을 확장시키면 우선권은 자식 클래스가 높게 가질 수 있다<br>
+
+참조의 범위는 다음과 같다<br>
+
+- Parent p = new Parent()
+- Parent p2 = new Child() - Parent의 상속받은 멤버와 오버라이드된 멤버를 참조할 수 있지만<br>
+                            Child에서 정의된 멤버는 참조 할 수 없다<br>
+
+## 참조 범위를 이해하자
+
+- Class Super
+
+부모 클래스의 멤버메소드를 정의하였다<br>
+
+```java
+package Inheritance;
+
+public class Super {
+
+	void result() {
+		System.out.println("Parent");
+	}
+}
+
+```
+
+- Class Sub
+
+자식 클래스에서 부모 클래스의 메소드를 재 정의 하였다<br>
+
+```java
+package Inheritance;
+
+public class Sub  extends Super{
+
+	@Override
+	void result() {
+		System.out.println("Child @Override");
+	}
+	
+	void result2() {
+		System.out.println("Child Method");
+	}
+}
+```
+
+- Class SuperSubMain
+
+```java
+package Inheritance;
+
+public class SuperSubResult {
+	
+	public static void main(String[] args) {
+		
+		Super sr = new Sub();
+		sr.result();
+		
+//		sr.result2(); 접근불가
+		
+//		위 처럼 부모 레퍼런스를 참조하여 자식 클래스의
+//      result2() 메소드는 참조 할 수 없다
+//      sr 의 참조범위는 상속한 멤버 와 오버라이드된 범위까지이다
+	}
+}
+```
+
+<strong>출력</strong><br>
+
+```java
+Child @Override
+```
+
+# Super 개념
+
+자바에서 super란  자식 클래스가 부모 클래스 로 부터<br>
+상속받은 멤버를 참조할 때 사용할 수 있는 참조 변수를 의미한다<br>
+
+예를들어 클래스 안의 멤버변수 와 지역변수 의 이름이 같아<br>
+혼란을 방지하려고  this로 구분지어 줄 수 있었다면 ,  super는<br>
+
+부모 클래스 , 자식 클래스 의 멤버 이름이 같을 경우 super로 구분지어 줄 수 있다<br>
+this , super 의 공통점 은 인스턴스 주소 값 을 저장한다.<br>
+
+※ 부모 객체를 참조할 수 있는 참조변수 는 오버라이딩 되면 재정의가 되어서<br>
+※ 부모 클래스의 일부를 사용할 수 없는 상태 즉 `멤버 은폐` 된 상태가 된다<br>
+※ 자식 클래스에서 부모 클래스 `자체`를 참조하고자 할 경우에만 사용한다<br>
+
+## super()
+
+super() 메소드는 부모 클래스의 `생성자` 를 의미하고<br>
+자식 클래스에서 부모 클래스의 생성자를 사용할 때는 super() 메소드를 명시해줘야만 한다<br>
+
+- Class Unit
+
+Unit 이라는 부모클래스 에서는 공격력 체력 마력 등을 정의하였다<br>
+
+```java
+package Inheritance.aaa;
+
+public class Unit {
+	
+	public String attack;   // 공격력
+	public String physical; // 체력
+	public String mana;     // 마력
+	
+	public Unit(String attack, String physical , String mana ) {
+		
+		this.attack = attack;
+		this.physical = physical;
+		this.mana = mana;
+	}
+
+	public String getAttack() {
+		return attack;
+	}
+
+	public void setAttack(String attack) {
+		this.attack = attack;
+	}
+
+	public String getPhysical() {
+		return physical;
+	}
+
+	public void setPhysical(String physical) {
+		this.physical = physical;
+	}
+
+	public String getMana() {
+		return mana;
+	}
+
+	public void setMana(String mana) {
+		this.mana = mana;
+	}
+}
+```
+
+- Class Hunter
+
+Hunter 클래스에서는 Unit 클래스를 상속받고 생성자를 사용받기 위해<br>
+다음과 같이 정의한다<br>
+
+```java
+package Inheritance.aaa;
+
+public class Hunter extends Unit {
+	
+	String name;     // 이름
+	String weapons;  // 무기
+
+	public Hunter(String attack, String physical, String mana , String name , String weapons) {
+		super(attack, physical, mana); // 부모 클래스의 생성자 호출
+		this.name = name;
+		this.weapons = weapons;
+	}
+	
+	public String getName() {
+		return name;
+	}
+	
+	public String getWeapons() {
+		return weapons;
+	}
+
+}
+```
+
+- Class Game
+
+```java
+package Inheritance.aaa;
+
+public class Game {
+
+  public static void main(String[] args) {
+		
+	Hunter hunter = new Hunter("500", "2000", "750", "용사님","전설의 나뭇가지");
+		
+    System.out.println("이름 : " + hunter.getName());
+    System.out.println("무기 : " + hunter.getWeapons());		
+    System.out.println("공격력 : " + hunter.getAttack());
+    System.out.println("체력 : " + hunter.getPhysical());
+    System.out.println("마력 : " + hunter.getMana());		
+	}
+}
+```
+
+<strong>출력</strong><br>
+
+```java
+이름 : 용사님
+무기 : 전설의 나뭇가지
+공격력 : 500
+체력 : 2000
+마력 : 750
+```
