--- a/_posts/2021-06-23-Super.md
+++ b/_posts/2021-06-23-Super.md
@@ -6,7 +6,7 @@ categories : [Java]
 tags: [Java]
 ---
 
-## Super 
+# Super 
 
 자바에서 super 라는 것 이 있습니다 , 먼저 이것은 ```자식 클래스가 부모 클래스 로 부터``` <br>
 ```상속받은 멤버를 참조할 때 사용할 수 있는 참조 변수``` 입니다<br>
