--- a/_posts/2021-08-04-extends.md
+++ b/_posts/2021-08-04-extends.md
@@ -392,7 +392,7 @@ public class Parent {
 - Class Child
 
 자식클래스에서 부모클래스의 멤버변수를 물려받은 후<br>
-getMessage() 메소드에서 구매여부 기능을 확장한 아주아주 기초적인 코드를 작성하였다<br>
+getMessage() 메소드에서 고장여부 기능을 확장한 아주아주 기초적인 코드를 작성하였다<br>
 
 ```java
 package Inheritance;
