--- a/_posts/2021-08-20-IOstream.md
+++ b/_posts/2021-08-20-IOstream.md
@@ -1,5 +1,5 @@
 ---
-title:  Java - I/O 파일 입출력
+title:  Java - I/O 파일 입출력 및 객체 직렬화
 author: Kim
 date: 2021-08-20 06:00:00 +0900
 categories : [Java]
