--- a/_posts/2021-09-11-javascript01.md
+++ b/_posts/2021-09-11-javascript01.md
@@ -5,3 +5,193 @@ date: 2021-09-11 06:00:00 +0900
 categories : [JavaScript]
 tags: [JavaScript]
 ---
+
+# script를 효율적으로 선언하는방법 2가지 async 와 defer
+
+다음과같이 head영역안에 script를 포함했을때 어떤 순서대로 사용자에게 페이지가 보여질까?<br>
+
+```html
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <script src="main.js"></script>
+</head>
+```
+
+
+## 브라우저가 html을 파싱하는 과정
+
+- parsing : 브라우저가 위 태그들을 한줄한줄씩 분석한다<br>
+            분석하고 이해한것을 css와 병합해서 Dom요소로 변환하게 된다<br>
+
+- 인터프리터 방식으로 쭉 분석하다가 script 태그가 보이면 js파일을 서버에서 다운받아야 된다는 것을<br>
+  이해하게 된다 이때 잠시 파싱을 잠시 멈춘다음 필요한 자바스크립트 파일을 서버에서 다운받고<br>
+   실행한 다음 이어서 파싱하는부분으로 넘아가게됨<br>
+
+위와같이 하면 어떤 단점이 있을까?<br>
+
+```javascript
+엘리 : 만약 main.js 파일이 엄청난 크기이고 인터넷까지 느리다고 가정해보자
+        사용자는 개발자가 만든 웹사이트를 보는 데 까지 많은 시간이 소요 될 가능성이 높다
+        따라서 script를 '그냥' head영역에 포함하는것은 좋은방법이 아니다
+```
+
+script를 선언하는 방법중 body영역의 끝부분에 선언하는방법이 있다 이 방법또한 많이 사용된다고 한다.<br>
+
+```html
+<body>
+    <div></div>
+    <script src="main.js"></script>
+</body>
+```
+
+이렇게 하게되면 브라우저가 html을 다운받아서 쭉 파싱하다가 페이지가 준비되면 script를 만나게 된다<br>
+이 또한 js파일을 서버에서 받아오고 실행하게 된다 페이지가 사용자들에게 js파일을 받기전에도<br>
+이미 준비가 된 상태여서 사용자는 빠르게 페이즈의 컨텐츠를 볼 수 있는 장점이 생긴다<br>
+
+이런 방법도 좋지만 여기에서도 단점이 생기는데 어떤 단점이 생길까?<br>
+
+```javascript
+엘리 : 사용자가 기본적인 html콘텐츠를 빨리 본다는 장점은 있지만
+        웹사이트가 자바스크립트의 의존성이 높다면
+        사용자가 의미있는 컨텐츠를 보기 위해서는 자바스크립트를 이용해서 서버에 존재하는
+        데이터를 받아 온다 던지 아니면 보여주고자 하는 요소를 이쁘게 꾸며준다던지 등등
+        사용자가 정상적인 페이지를 보기 전까지는 서버에서 자바스크립트를 받아오는 시간도 기다려야하고
+        실행하는 시간도 기다려야 하는 단점이 생긴다
+```
+
+# script 옵션설정 async
+
+head영역에 script를 이용하되 async 이라는 속성 값을 설정할 수 있다 async 옵션을 설정하면 어떻게 될까?<br>
+
+예시 : ``` <script async src="main.js"></script>``` 
+
+- 속성 : async 은 기본적으로 타입이 boolean 을 가지고 있다 선언하는것 만으로도 true로 설정되있다<br>
+         위 속성값을 사용하게 되면 브라우저가 html을 다운로드를 받아서 파싱하는 과정에서<br>
+         script안에 async를 만나면 병렬로 main.js 파일을 다운로드 받아야 된다고 명령만 해놓고<br>
+         다시 파싱을 하다가 main.js가 다운로드가 완료되면 파싱하는 과정을 잠시 멈추고<br>
+         다운로드된 main.js파일을 실행하게 된다 실행이 다하고 나면<br>
+         나머지 html 요소를 파싱한다.<br>
+
+<img src ="/post/javascript/async.png"><br>
+
+이 속성값을 사용하면 장단점이 분명 존재한다 어떤 점이 있을까?<br>
+
+- 장점 : <body> 끝에 사용하는 것보다 fetching이 파싱하는 동안 병렬적으로 일어나기 때문에<br>
+         다운로드 받는 시간을 절약할 수 있다<br>
+
+하지만 자바스크립트가 html이 파싱 되기도 전에 실행이 되기때문에 <br>
+만약 자바스크립트 파일안에서 쿼리 셀렉터를 이용해 Dom 요소를 조작한다그러면 <br>
+조작 하려는 시점에 html에서 원하는 요소가 아직 정의되어 있지 않을 수가 있다<br>
+때문에 조금 위험할 수도 있다고 한다<br>
+
+또 하나는 html을 파싱하는 과정에 언제든지 자바스크립트를 실행하기 위해서 파싱을 멈출 수 있기때문에<br>
+사용자가 이용하는 페이지를 안에서 완전히 실행되려면 시간이 여전히 걸릴수도 있다는 점이 있다<br>
+
+# script 옵션설정 defer
+
+async 옵션 다음으로 살펴볼 수 있는 defer 속성값을 알아보자.<br>
+똑같이 head영역에 script를 선언하고 속성값에 defer를 정의하였다<br>
+
+예시 : ```<script defer src="main.js"></script>```<br>
+
+이것도 마찬가지로 파싱을 하는 과정에서 script를 만나게 되는데 속성값이 defer 이라고 하면<br>
+똑같이 다운로드를 받자 라고 명령만 시켜놓는다<br>
+그런다음 나머지 html 요소를 끝까지 파싱 후 마지막에 다운로드 되어진 자바스크립트를 실행할 수 있다<br>
+딱 봐도 defer 가 가장 좋은 옵션이라고 볼 수 있다<br>
+
+defer 속성값을 정리하면 필요한 자바스크립트를 모두 다운로드를 받고 사용자에게 페이지를 보여준다(파싱)<br>
+그다음 바로 이어서 다운로드 받은 자바스크립트를 실행한다고 이해하면 되겠다.<br>
+
+## async 와 defer 의 차이
+
+다음 속성값을 async로 주어진 script가 3개가 있다고 가정해보자<br>
+
+```javascript
+<script async src="a.js"></script>
+<script async src="b.js"></script>
+<script async src="c.js"></script>			
+```
+
+여기서 실행순서는 ```'먼저 다운로드가 완료된 스크립트 파일을 실행하게 된다 '```<br>
+
+예를들어서 b 스크립트가 다운로드가 완료되면 b 자바스크립트를 실행하고<br>
+이어서 a 스크립트가 다운로드 되면 a 자바스크립트를 실행하게 된다<br>
+즉 실행순서는 정의된 순서와 상관없이  다운로드가 먼저 완료된 순서로 자바스크립트를 실행한다고 보면 된다<br>
+
+```javascript
+예시 : b -> a - > c
+        a -> c -> b
+        c -> a -> b 
+```
+
+만약 페이지안에 자바스크립트가 순차적으로 진행해야 한다면 위와같은 방법은 별로 좋지 않은 방법이다<br>
+예를들어 a -> b - > c 와 같은 스크립트를 실행해야 할때의 이야기다.<br>
+
+반대로 defer 같은 파일이였다면 이야기가 달라진다<br>
+
+```javascript
+ <script defer src="a.js"></script>
+ <script defer src="b.js"></script>
+ <script defer src="c.js"></script>
+```
+
+html을 파싱하는 과정동안 정의된 자바스크립트 파일을 전부 다운로드를 받은 다음<br>
+순서대로 자바스크립트를 실행할 수 있다<br>
+
+※ 예시 : parsing -> end of parsing - > javascript 'a' 'b' 'c' <br>
+
+순서가 지켜지기 때문에 원하는 스크립트가 실행될 거라는 예상을 해볼 수 있다<br>
+
+여러모로 살펴봤을때 head영역안에 defer를 이용해서 script를 쓰는것이<br>
+제일 효율적이고 안전하다고 보면 되겠다.<br>
+
+# Use strict
+
+자바스크립트에서는 선언되지 않은 변수에 값을 할당 한다던지<br>
+아니면 기존에 존재하는 프로토타입을 변경 한다던지 이런 비상식적인 것들은<br>
+다른 언어를 공부하고 온 개발자들이 봤을때 약간 미친(?) 듯한 그런 행동들이다<br>
+
+ 'use strict'은 Ecma Script 5 버전에 추가되어져있는데 이것을 선언하게 되면<br>
+더이상은 비상식적인 방법을 사용할 수 없게 된다<br>
+
+예를들어 'use strict'를 사용하지 않고 변수에 값을 다음과 같이 할당하면 브라우저에서는<br>
+전혀 문제가 될게 없다<br>
+
+```javascript
+console.log("Hello World");
+a = 6;
+```
+
+다음은 use strict를 사용했을때는 브라우저에서 어떤 변화가 생길까?<br>
+
+```javascript
+'use strict';
+console.log("Hello World");
+a = 6;
+```
+
+브라우저는 다음과 같이 에러를 발생하게 되고 a는 정의되어있지 않아 라고 알려준다<br>
+
+```javascript
+Uncaught ReferenceError: a is not defined
+    at main.js:3
+```
+
+해당 에러를 없애기 위해서는 간단하게 js파일에서 변수 a를 만들어 주면 된다<br>
+
+```javascript
+'use strict';
+console.log("Hello World");
+
+let a;
+
+a = 6;
+```
+
+순수 자바스크립트를 개발 할때는 js파일 위에 use strict를 선언해주면서 strict 모드로 개발하는걸<br>
+추천해 주셨다. 이렇게 하면 조금 더 상식적인 범위 안에서 자바스크립트를 개발 할 수 있다<br>
+덤으로 자바스크립트 엔진이 조금 더 효율적으로 더 빠르게 분석하고 실행하는데 있어서<br>
+조금더 나은 성능 개선까지 개발자가 기대 할 수 있다고 하셨다.<br>
